homl6_add_CARTandOtherAlgo

--- a/_posts/2020-02-06-homl6.md
+++ b/_posts/2020-02-06-homl6.md
@@ -67,6 +67,8 @@ $$
 
 훈련 세트를 성공적으로 둘로 나누면 같은 방식으로 서브셋을 계속 나누어간다. 그러다가 최대 깊이에 도달하거나, 불순도를 줄이는 분할을 찾을 수 없게 되면 멈추게 된다.[^2]
 
+- 사이킷런에서는 CART 알고리즘을 사용하지만, 의사결정트리에는 CART외에도 C4.5, CHAID 등의 알고리즘이 있다. 다른 알고리즘에 대한 정보는 [이곳](https://ai-times.tistory.com/177) 을 참고하면 좋다.
+
 <br/>
 
 ## 5) 계산 복잡도
@@ -115,7 +117,7 @@ $$
 
 >  $MSE_{node} = \sum_{i \in \text{node}} (\hat{y}_{\text{node}} - y^{(i)})^2$
 >
-> $\hat{y}_{\text{node}} = \frac{1}{m_{node}} \sum_{i \in \text{node}} y^{(i)}$
+> $\hat{y}_{\text{node}} = \frac{1}{m_{node}} \sum_{i \in \text{node}} y^{(i)}$ 
 
 결정 트리는 분류 모델에서도 그랬던 것처럼 회귀에서도 과대적합되기가 쉽다. 그렇기 때문에 다양한 파라미터를 조정하여 결정 트리를 규제한다면 훨씬 더 일반화된 모델을 만들어낼 수 있을 것이다.
 
