--- a/_posts/2020-02-18-LA2.md
+++ b/_posts/2020-02-18-LA2.md
@@ -37,7 +37,7 @@ $$
 
 $$
 \left[\begin{array}{ccc} \text{2  1  1} \\ \text{4 -6  0} \\ \text{-2 7  2}\end{array} \right]\left[\begin{array}{ccc} u \\ v \\w \end{array} \right] = \left[\begin{array}{ccc} 5 \\ -2 \\ 9 \end{array} \right]
-\qquad \rarr \qquad
+\qquad \Rightarrow \qquad
 \left[\begin{array}{ccc} \text{2  1  1} \\ \text{0 -8 -2} \\ \text{0  0  1}\end{array} \right]\left[\begin{array}{ccc} u \\ v \\w \end{array} \right] = \left[\begin{array}{ccc} 5 \\ -12 \\ 2 \end{array} \right]
 $$
 
@@ -51,9 +51,9 @@ $$
 
 $$
 \left[\begin{array}{ccc} \text{2  1  1} \\ \text{4 -6  0} \\ \text{-2 7  2}\end{array} \right]\left[\begin{array}{ccc} u \\ v \\w \end{array} \right] = \left[\begin{array}{ccc} 5 \\ -2 \\ 9 \end{array} \right]\\
-\rarr \quad
+\Rightarrow \quad
 \left[\begin{array}{ccc} \text{1  0  0} \\ \text{-2 1  0} \\ \text{1  0  1}\end{array} \right]\left[\begin{array}{ccc} \text{2  1  1} \\ \text{4 -6  0} \\ \text{-2 7  2}\end{array} \right]\left[\begin{array}{ccc} u \\ v \\w \end{array} \right] = \left[\begin{array}{ccc} 5 \\ -12 \\ 14 \end{array} \right] \\
-\rarr \quad
+\Rightarrow \quad
 \left[\begin{array}{ccc} \text{1  0  0} \\ \text{0  1  0} \\ \text{0  1  1}\end{array} \right]
 \left[\begin{array}{ccc} \text{1  0  0} \\ \text{-2 1  0} \\ \text{1  0  1}\end{array} \right]\left[\begin{array}{ccc} \text{2  1  1} \\ \text{4 -6  0} \\ \text{-2 7  2}\end{array} \right]\left[\begin{array}{ccc} u \\ v \\w \end{array} \right] = \left[\begin{array}{ccc} 5 \\ -12 \\ 14 \end{array} \right]
 $$
