--- a/_posts/2020-02-17-dataStruct1_1.md
+++ b/_posts/2020-02-17-dataStruct1_1.md
@@ -125,28 +125,58 @@ $$
 
 첫 번째 방법은 메모리 할당량이 적지만 특정 문자열을 탐색하는 데 걸리는 시간이 길다. 두 번째 방법은 특정 문자열을 빠르게 찾을 수는 있지만, 공간을 많이 낭비(검은색)하게 된다는 단점이 있다. 마지막 방법은 메모리 할당량이 가장 적고, 특정 문자열을 찾을 때에도 **메모리 연산** 을 이용하여 빠르게 찾아낼 수 있다는 장점이 있다.
 
+| 항목                      | 메모리 이용률                                              | 부분 문자열 탐색 시간                                |
+| ------------------------- | ---------------------------------------------------------- | ---------------------------------------------------- |
+| 구분자를 사용하는 방법    | 문자열 길이 + 구분자 길이 → 효율적                         | 문자 비교 연산 시간 + 구분자 식별 시간 → 비효율적    |
+| 고정 길이로 저장하는 방법 | 가장 긴 부분의 문자열 길이 X 부분 문자열의 개수 → 비효율적 | 문자 비교 연산 시간 → 효율적                         |
+| 포인터를 사용하는 방법    | 문자열 길이 + 포인터 저장공간 → 효율적                     | 문자 비교 연산 시간 + 포인터 주소 연산 시간 → 효율적 |
+
 <br/>
 
 ## 3) 자료의 추상화
 
+- **추상화** (Abstraction) : 뇌가 어떤 대상 전체가 아니라 특징만을 기억한 뒤 다시 떠올리는 현상. 컴퓨터도 이와 같은 기능을 수행한다. 자료 추상화에 이용하는 기본 개념에는 자료(Data), 연산(Operation), 자료형(Data Type)이 있다.
+  - **자료** : 프로그램의 처리 대상이 되는 모든 것.
+  - **연산** : 어떤 일을 처리하는 과정으로 연산자를 이용하여 수행.
+  - **자료형** : 처리할 자료의 집합과 자료에 대해 수행할 수 있는 연산자의 집합. 자료형을 정의할 때는 자료형에 속하는 값과 이를 처리하기 위해 사용할 수 있는 연산자를 정의한다.
+    - 시스템 정의 자료형 : 프로그래밍 언어에서 정의하여 제공하는 자료형
+    - 사용자 정의 자료형 : 사용자가 정의하여 쓰는 자료형, 자료형을 정의하려면 구체적으로 구현하기 전에 자료형에 대한 자료의 특성, 연산자, 연산자가 무엇을 수행하는지 등을 논리적으로 정의해놓아야 한다. 이렇게 추상화하여 정의한 자료형을 추상 자료형이라고 한다.
 
+추상화는 이해를 위해 '무엇인지'를 논리적으로 정의하는 것이고, 구체화는 사용을 위해 '어떻게 할 지'를 실제적으로 표현하는 것이다. 
+
+| 구분   | 자료        | 연산          |
+| ------ | ----------- | ------------- |
+| 추상화 | 추상 자료형 | 알고리즘 정의 |
+| 구체화 | 자료형      | 프로그램 구현 |
 
 <br/>
 
 ## 4) 알고리즘의 이해
 
-
+- **알고리즘** (Algorithm) : 주어진 문제를 해결하는 방법을 추사오하하여 일련의 단계적 절차를 논리적으로 기술해 놓은 명세서.
+- 알고리즘의 조건
+  - 입력(Input) : 알고리즘을 수행하는 데 필요한 자료가 외부에서 입력되어야 한다.
+  - 출력(Output) : 알고리즘을 수행하고 나면 결과를 하나 이상 출력해야 한다.
+  - 명확성(Definiteness) : 수행할 작업의 내용과 순서를 나타내는 알고리즘의 명령어는 명확하게 명시되어야 한다.
+  - 유한성(Finiteness) : 알고리즘을 모두 수행하고 나면 반드시 종료되어야 한다.
+  - 효과성(Effectiveness) : 알고리즘의 모든 명령어는 기본적이며 실행할 수 있어야 한다.
 
 <br/>
 
 ## 5) 알고리즘의 표현 방법
 
-
+- 자연어를 이용한 서술적 표현
+- 순서도를 이용한 도식화
+- 프로그래밍 언어를 이용한 구체화
+- 가상코드를 이용한 추상화
 
 <br/>
 
 ## 6) 알고리즘의 성능 분석
 
-
+- 알고리즘 성능 분석 기준
+- 알고리즘 성능 분석 방법
+  - 공간 복잡도 : 알고리즘을 프로그램으로 실행하여 완료되는 데까지 필요한 총 저장 공간을 의미한다. 공간 복잡도는 필요한 고정 공간과 가변 공간을 합하여 구한다. 고정 공간은 프로그램 크기나 입출력 횟수와는 상관없이 고정적으로 필요한 저장공간으로 프로그램 저장 공간과 변수 및 상수를 저장하는 공간이다. 가변 공간은 실행 과정에서 사용하는 자료와 변수를 저장하는 공간과 함수를 실행하는 데 관련 있는 정보를 저장하는 공간이다.
+  - 시간 복잡도 : 시간 복잡도는 알고리즘을 프로그램으로 실행하여 완료하는 데까지 소요되는 시간이다. 시간 복잡도는 프로그램의 컴파일 시간과 실행 시간을 더해 구한다.
 
 <br/>
