--- a/_posts/2020-02-17-dataStruct1_1.md
+++ b/_posts/2020-02-17-dataStruct1_1.md
@@ -175,8 +175,28 @@ $$
 ## 6) 알고리즘의 성능 분석
 
 - 알고리즘 성능 분석 기준
+
+  - 정확성 : 올바른 자료가 입력되었을 때 유한한 시간 내에 올바른 결과를 출력할 수 있는가
+  - 명확성 : 알고리즘이 얼마나 이해하기 쉽게 작성되었는가
+  - 수행량 : 일반적인 연산을 제외한 중요 연산을 분석하여 나온 수행량
+  - 메모리 사용량
+  - 최적성 : 시스템의 사용 환경과 중요 요구사항에 맞는 알고리즘을 작성하였는가? (가장 중요!)
+
 - 알고리즘 성능 분석 방법
-  - 공간 복잡도 : 알고리즘을 프로그램으로 실행하여 완료되는 데까지 필요한 총 저장 공간을 의미한다. 공간 복잡도는 필요한 고정 공간과 가변 공간을 합하여 구한다. 고정 공간은 프로그램 크기나 입출력 횟수와는 상관없이 고정적으로 필요한 저장공간으로 프로그램 저장 공간과 변수 및 상수를 저장하는 공간이다. 가변 공간은 실행 과정에서 사용하는 자료와 변수를 저장하는 공간과 함수를 실행하는 데 관련 있는 정보를 저장하는 공간이다.
-  - 시간 복잡도 : 시간 복잡도는 알고리즘을 프로그램으로 실행하여 완료하는 데까지 소요되는 시간이다. 시간 복잡도는 프로그램의 컴파일 시간과 실행 시간을 더해 구한다.
+  - 공간 복잡도 : 알고리즘을 프로그램으로 실행하여 완료되는 데까지 필요한 총 저장 공간. 고정공간과 가변 공간의 합이다.
+    - 고정 공간 : 프로그램 크기나 입출력 횟수와는 상관없이 고정적으로 필요한 저장공간. 프로그램 저장 공간과 변수 및 상수를 저장한다.
+    - 가변 공간 : 실행 과정에서 사용하는 자료와 변수를 저장하고, 함수를 실행하는 데 관련 있는 정보를 저장하는 공간이다.
+  - 시간 복잡도 : 시간 복잡도는 알고리즘을 프로그램으로 실행하여 완료하는 데까지 소요되는 시간. 프로그램의 컴파일 시간과 실행 시간을 더해 구한다. 컴파일 시간은 프로그램 특성과 큰 관련이 없지만, 실행 시간은 실행되는 컴퓨터의 성능에 따라 달라질 수 있기 때문에 명령문의 실행 빈도수를 계산하여 추정한다.
+  
+- 알고리즘 성능 분석 표기법
+
+  - 빅-오 표기법 : $O(\text{f(n)})$ 과 같이 표기한다. 함수의 상한을 나타내기 위한 표기법이다. 일반적으로 최악의 경우를 따지기 때문에 가장 많이 사용된다. 먼저 실행 빈도수를 구하여 실행 시간 함수를 찾고, 이 함수값에 가장 큰 영향을 주는 n에 대한 항을 한 개 선택하여 계수는 생략하고 $O$ 의 오른쪽 괄호 안에 표시한다. 
+  - 빅-오메가 표기법 : $\Omega(\text{f(n)})$ 과 같이 표기한다. 함수의 하한을 나타내기 위한 표기법이다.
+  - 빅-세타 표기법 : $\theta(\text{f(n)})$ 와 같이 표기한다. 함수의 상한, 하한을 동시에 나타내기 위한 표기법이다.
+  - 알고리즘에 따라 $\log n, n, n\log n, n^2, n^3, 2^n$ 등의 실행 시간 함수가 있다. 각 알고리즘에 대한 실행 빈도수는 아래의 그림을 참고하자.
+
+  ![시간 복잡도](https://blog.chulgil.me/content/images/2019/02/Screen-Shot-2019-02-07-at-2.31.54-PM-1.png)
+
+  
 
 <br/>
