--- a/_posts/2020-02-18-LA2.md
+++ b/_posts/2020-02-18-LA2.md
@@ -76,7 +76,7 @@ $\mathbf{A}\mathbf{x} = \mathbf{b}$ 에서 $\mathbf{L}^{-1}\mathbf{A}\mathbf{x} 
 
 ## 5) Inverse & Transpose
 
-- Inverse Matrix : $\mathbf{A}\mathbf{A}^{-1} = \mathbf{A}^{-1} \mathbf{A} = \mathbf{I}$ (단, 모든 $\mathbf{A}$ 가 역행렬을 가지는 것은 아니다.)
+- 역행렬 (Inverse Matrix) : $\mathbf{A}\mathbf{A}^{-1} = \mathbf{A}^{-1} \mathbf{A} = \mathbf{I}$ (단, 모든 $\mathbf{A}$ 가 역행렬을 가지는 것은 아니다.)
 
 1. 역행렬 $\mathbf{A}^{-1}$ 는 자신의 Gaussian Elimination이 존재하며, $n$ 개의 pivot을 가지고 있다.
 2. 역행렬은 특정(Unique)하다.
@@ -85,4 +85,18 @@ $\mathbf{A}\mathbf{x} = \mathbf{b}$ 에서 $\mathbf{L}^{-1}\mathbf{A}\mathbf{x} 
 
 
 
-- Gauss-Jordan Method : 행렬 $\mathbf{A}\mathbf{B} = \mathbf{A} \left[\begin{array}{ccc} b_1 \text{ }b_2 \text{ }... \text{ }b_n \end{array} \right] = \left[\begin{array}{ccc} \mathbf{A}b_1 \text{ }\mathbf{A}b_2 \text{ }... \text{ }\mathbf{A}b_n \end{array} \right]$ 과 같이 나타낼 수 있다. 역행렬
+- 전치행렬 (Transpose, $\mathbf{A}^T$ ) : $a_{ij} \rightarrow a_{ji}$ 
+
+  - 전치행렬의 성질
+
+  1. $(A+B)^T = A^T + B^T$
+  2. $(AB)^T = B^T A^T$
+  3. $(A^{-1})^T = (A^T)^{-1}$ at Square Matrix
+
+  - Symmetric Matrix : $A = A^T$
+
+
+
+- Correlation matrix , $\mathbf{R}$
+  - $\mathbf{R} = \mathbf{A}^T\mathbf{A}$ 
+  - 벡터의 내적 (성분 곱의 합) → 특정 벡터 방향으로의 사영(Projection), 상관성을 나타낸다.
