--- a/_posts/2020-02-17-homl8.md
+++ b/_posts/2020-02-17-homl8.md
@@ -145,7 +145,7 @@ grid_search.fit(X, y)
 - 다차원 스케일링(Multidimensional Scaling, MDS)은 샘플 간의 거리를 보존하면서 차원을 축소한다.
 - Isomap은 각 샘플을 가장 가까운 이웃과 연결하는 식으로 그래프를 만든다. 그런 다음 샘플 간의 지오데식 거리(geodesic distance)를 유지하면서 차원을 축소한다.
 - t-SNE(t-Distributed Stochastic Neighbor Embedding)는 비슷한 샘플은 가까이, 비슷하지 않은 샘플은 멀리 떨어지도록 하면서 차원을 축소한다. 주로 시각화에 많이 사용되며 특히 고차원 공간에 있는 샘플의 군집을 시각화할 때 사용된다.
-- 선형 판별 분석(Linear Discriminant Analysis, LDA)은 사실 분류 알고리즘이다. 하지만 훈련 과정에서 클래스 사이를 가장 잘 구분하는 축을 학습한다. 이 축으 ㄴ데이터가 투영되는 초평면을 정의하는 데 사용할 수 있다. 이 알고리즘의 장점은 투영을 통해 가능한 한 클래스를 멀리 떨어지게 유지시키므로 SVM 분류기 같은 다른 분류 알고리즘을 적용하기 전에 차원을 축소시키는 데 좋다.
+- 선형 판별 분석(Linear Discriminant Analysis, LDA)은 사실 분류 알고리즘이다. 하지만 훈련 과정에서 클래스 사이를 가장 잘 구분하는 축을 학습한다. 이 축은 데이터가 투영되는 초평면을 정의하는 데 사용할 수 있다. 이 알고리즘의 장점은 투영을 통해 가능한 한 클래스를 멀리 떨어지게 유지시키므로 SVM 분류기 같은 다른 분류 알고리즘을 적용하기 전에 차원을 축소시키는 데 좋다.
 
 <br/>
 
