--- a/_posts/2020-01-29-chap1.md
+++ b/_posts/2020-01-29-chap1.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: 1. 한눈에 보는 머신러닝
-category: Hands on Machine Learning
+category: Machine Learning
 tag: Machine-Learning
 ---
 
