--- a/_posts/2020-02-05-svm.md
+++ b/_posts/2020-02-05-svm.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: 5. 서포트 벡터 머신(SVM)
-category: Hands on Machine Learning
+category: Machine Learning
 tag: Machine-Learning
 ---
 
