--- a/_posts/2020-03-31-git_basic.md
+++ b/_posts/2020-03-31-git_basic.md
@@ -11,29 +11,24 @@ tag: Git
 
 
 
-# 1) 깃(Git)
+# 깃 시작과 기초
 
-- 2005년에 리누스 토르발츠(Linus Benedict Torvalds)가 개발. 깃의 모든 소스는 깃허브에 공개
+## 깃(Git) 이란?
 
-
-
-## 버전 관리
-
-로컬 환경에서 독립적으로 소스의 버전관리 가능 
+- 2005년에 리누스 토르발츠(Linus Benedict Torvalds)가 개발한 분산형 버전관리 시스템. 깃의 모든 소스는 깃허브에 공개되어 있다.
 
 
 
-## 협업
+## 깃의 용도
 
-- 코드 공유
-- 책임과 기록
-- 원격 공유
+- 버전 관리
 
-<br/>
+- 협업
+  - 코드 공유
+  - 책임과 기록
+  - 원격 공유
 
 
-
-# 2) 깃 시작과 기초
 
 ## 깃 저장소 생성
 
