--- a/_posts/2020-04-04-mle_map.md
+++ b/_posts/2020-04-04-mle_map.md
@@ -19,9 +19,9 @@ tag: Machine-Learning
 
 던지는 행위는 **i.i.d(independent and identical distributed, 독립 항등 분포)** 이다. i.i.d는 Independent(독립적)이며 Identical distributed(동일한 확률 분포)를 가지는 것을 말한다. 압정을 던지는 행위는 먼저 던진 사건이 이후 사건에 영향을 주지 않고(독립적) 사건이 고유한 정규분포를 따르므로(동일한 확률 분포) i.i.d이다.
 
-압정을 던져 머리부분이 나오는 확률을 $P(H)$ 라 하고, 꼬리부분이 나오는 확률을 $P(T)$ 라고 하자.
+압정을 던져 머리부분이 나오는 확률을 $P(H)$ 라 하고, 꼬리부분이 나오는 확률을 $P(T)$ 라고 하자. $P(H) = \theta$ , $ P(T) = 1 - \theta$  라면, $HHTHT$ 의 경우가 발생할 경우는 아래와 같이 나타낼 수 있다.
 $$
-P(H) = \theta, \quad P(T) = 1 - \theta \text{ 라면, } HHTHT \text{의 경우가 발생할 경우는 아래와 같이 나타낼 수 있다.} \\
+\\
 P(HHTHT) = \theta^3 (1 - \theta)^2 \\
 \text{일반화하면 } P(D\vert \theta) = \theta^{a_H}(1 - \theta)^{a_T} \\
 D : \text{발생한 데이터} \quad (a_H, a_T) : D \text{ 에서 H와 T가 발생한 횟수} \\
