--- a/_posts/2020-04-04-mle_map.md
+++ b/_posts/2020-04-04-mle_map.md
@@ -38,7 +38,7 @@ $$
 
 
 
-## Maximum Likelihood Estimation(최대 우도 추g정)
+## Maximum Likelihood Estimation(최대 우도 추정)
 
 압정 실험이 $p(H) = \theta$ 인 Binomial distribution을 따른다는 가설을 세워보자. 이 가설이 맞다는 것을 강화하려면 어떻게 해야 할까? 정해지지 않은 $\theta$ 의 가장 적절한( $P(D \vert \theta)$ 를 최대로 하는) 값을 찾아내면 될 것이다. 이 때의 $\theta$ 값을 **MLE(Maximum Likelihood Estimation, 최대 우도 추정)** 라고 한다. 수식으로는 아래와 같이 나타낼 수 있다. 
 
