add_Korean_at_title

--- a/_posts/2020-04-04-mle_map.md
+++ b/_posts/2020-04-04-mle_map.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: MLE & MAE
+title: 최대 우도 추정 & 최대 사후 확률 추정(MLE & MAE)
 category: Machine Learning
 tag: Machine-Learning
 ---
