--- a/_posts/2020-02-18-LA1.md
+++ b/_posts/2020-02-18-LA1.md
@@ -7,30 +7,33 @@ tag: Linear-Algebra
 
 
 
+# Matrix (m x n)
 
+[행렬]([https://ko.wikipedia.org/wiki/%ED%96%89%EB%A0%AC](https://ko.wikipedia.org/wiki/행렬)) 의 성질
 
-## 1) Matrix (m x n)
-
-- [행렬]([https://ko.wikipedia.org/wiki/%ED%96%89%EB%A0%AC](https://ko.wikipedia.org/wiki/행렬)) 의 성질
-  - $A \pm B$ : m, n (행의 개수, 열의 개수)이 동일한 경우 행렬 간 덧셈, 뺄셈이 가능
-  - $AB$ : $A_{m \times n} B_{n \times l}$ 일 때, 행렬 간 곱셈이 가능. 곱셈 결과로 나온 행렬은 $(AB)_{m \times l}$ 이 된다.
-  - $AB \neq BA$  : 일반적으로는 행렬간 곱셈이 성립하지 않는다.
-  - $AI = IA = A$ : $I$ (단위행렬, 대각성분이 모두 1인 행렬)는 행렬 곱셈의 항등원이다.
-  - $AA^{-1} = I$ 또는 $A^{-1}A = I$ : (단, 정사각행렬이 아닐 경우에는 Left Inverse와 Right Inverse가 다르다.
+- $A \pm B$ : m, n (행의 개수, 열의 개수)이 동일한 경우 행렬 간 덧셈, 뺄셈이 가능
+- $AB$ : $A_{m \times n} B_{n \times l}$ 일 때, 행렬 간 곱셈이 가능. 곱셈 결과로 나온 행렬은 $(AB)_{m \times l}$ 이 된다.
+- $AB \neq BA$  : 일반적으로는 행렬간 곱셈이 성립하지 않는다.
+- $AI = IA = A$ : $I$ (단위행렬, 대각성분이 모두 1인 행렬)는 행렬 곱셈의 항등원이다.
+- $AA^{-1} = I$ 또는 $A^{-1}A = I$ : (단, 정사각행렬이 아닐 경우에는 Left Inverse와 Right Inverse가 다르다.
 
 
 
 <br/>
 
-## 2) Vector
+# Vector
 
-- [벡터]([https://ko.wikipedia.org/wiki/%EB%B2%A1%ED%84%B0_%EA%B3%B5%EA%B0%84](https://ko.wikipedia.org/wiki/벡터_공간)) : 1차원 행렬(행 벡터)을 전치하여 열 벡터로 나타낸다.
+[벡터]([https://ko.wikipedia.org/wiki/%EB%B2%A1%ED%84%B0_%EA%B3%B5%EA%B0%84](https://ko.wikipedia.org/wiki/벡터_공간)) : 1차원 행렬(행 벡터)을 전치(Transpose)하여 열 벡터로 나타낸다.
+
 
 $$
 \mathbf{V} = (a, b, c)^T = \left[\begin{array}{ccc} a \\ b \\ c \end{array}\right]
 $$
 
-- 벡터의 성질
-  - $\mathbf{V_1} \pm \mathbf{V_2}$  : 벡터 간 덧셈과 뺄셈이 가능하다.
-  - $\mathbf{V_1} \cdot \mathbf{V_2}$ : 벡터의 내적(Inner product, Dot product)
-  - $\mathbf{V_1} \times \mathbf{V_2}$ : 벡터의 외적(Outer product, Cross product)
+
+
+벡터의 성질
+
+- $\mathbf{V_1} \pm \mathbf{V_2}$  : 벡터 간 덧셈과 뺄셈이 가능하다.
+- $\mathbf{V_1} \cdot \mathbf{V_2}$ : 벡터의 내적(Inner product, Dot product)
+- $\mathbf{V_1} \times \mathbf{V_2}$ : 벡터의 외적(Outer product, Cross product)
