--- a/_posts/2020-02-18-LA1.md
+++ b/_posts/2020-02-18-LA1.md
@@ -7,6 +7,10 @@ tag: Linear-Algebra
 
 
 
+
+
+이 포스트는 [한양대 이상화 교수님의 선형대수 강의](https://www.youtube.com/playlist?list=PLSN_PltQeOyjDGSghAf92VhdMBeaLZWR3) 를 바탕으로 작성되었습니다.
+
 # Matrix (m x n)
 
 [행렬]([https://ko.wikipedia.org/wiki/%ED%96%89%EB%A0%AC](https://ko.wikipedia.org/wiki/행렬)) 의 성질
