--- a/_posts/2020-02-18-LA2.md
+++ b/_posts/2020-02-18-LA2.md
@@ -1,102 +1,194 @@
 ---
 layout: post
-title: Gaussian Elimination
+title: 가우스 소거법 (Gaussian Elimination)
 category: Linear Algebra
 tag: Linear-Algebra
 ---
 
 
 
+이 포스트는 [한양대 이상화 교수님의 선형대수 강의](https://www.youtube.com/playlist?list=PLSN_PltQeOyjDGSghAf92VhdMBeaLZWR3) 를 바탕으로 작성되었습니다.
 
+# Gaussian Elimination
 
-## 1) 선형 연립방정식 풀이
+## 선형 연립방정식
 
-- 아래와 같은 연립방정식에서
+다음과 같은 연립방정식이 있다고 하자. 중학교 때 연립방정식을 푸는 2가지 방법에 대해 배웠다. 한 미지수의 계수를 맞추어 준 뒤 서로 빼주어 소거하는 가감법, 하나의 미지수에 대한 식으로 표현한 뒤 나머지 식에 대입하는 대입법.
+
 
 $$
-\begin{cases} x + 2y = 3\\ 4x + 5y = 6 \end{cases}
+\begin{cases} x + 2y = 3\\ 4x + 5y = 6 \end{cases} \\
+x = -1, y = 2
 $$
 
-- 관점의 차이
-  - Row form : 두 직선의 교점(Intersection)
-  - **Column form** : 두 벡터의 조합(linear combination of column vectors, 고차원에서 해의 의미를 찾기 쉽다)
+
+
+가감법이든 대입법이든 중등 교육과정에서 우리는 연립방정식을 두(혹은 N개) 직선의 교점을 구하는 것으로 배웠다. 연립방정식을 N개 직선의 교점(Intersection)을 구하는 것으로 바라보는 관점을 **Row form** 이라고 한다. Row form 말고도 하나의 관점이 더 있다. 이름을 맞추는데 성공하신 분도 있을 것이다. 다른 관점의 이름은 **Column form** 이다. Column form 에서는 두(혹은 N개) 벡터의 조합(linear combination of column vectors)으로 연립방정식을 바라본다.
+
+당장은 두 관점의 장단점이 눈에 띄지 않는다. 오히려 Row form이 익숙하고 좋아보인다. 하지만 미지수와 식의 개수가 늘어날수록 Row form에서의 교점(Intersection, 혹은 교차하는 부분)을 상상하기가 어렵다. 머릿속에서 그려볼 수 있는 정도는 3차원인데, 그 3차원에서 서너개의 평면이 떠다니는 상상만으로도 머리가 아파오기 마련이다. 그래서 선형대수학에서는 **Column form** 을 사용한다. N개 벡터를 목표하는 지점까지 가는 조합을 찾는 것은 적어도 평면을 찾는 것보다는 상상하기 쉽기 때문이다. 즉, 고차원에서 해의 의미를 찾기 쉽기 때문에 Column form 을 사용하도록 한다.
 
 
 
-<br/>
+## Gaussian Elimination
 
-## 2) Gaussian Elimination
+이제는 좀 더 복잡한 식을 연립방정식을 풀어보도록 하자. 아래는 3개의 식으로 구성된 미지수 3개짜리 연립방정식이다. 
 
-- 3개 식으로 구성된 새로운 연립방정식이 있다고 하자.
 
 $$
 \begin{cases} 2u + v + w = 5 \\ 4u - 6v = -2 \\ -2u + 7v + 2w = 9 \end{cases}
 $$
 
-- 위 식을 행렬로 나타내면 왼쪽과 같이 표현할 수 있고, 각 식을 빼주면서 오른쪽과 같은 상삼각행렬(Upper Triangular Matrix, $\mathbf{U}$ ,행렬의 대각을 기준으로 왼쪽 아래 성분이 모두 0인 행렬)로 표현할 수 있다. 여기서 대각 성분에 해당하는 $2, -8, 1$ 를 피봇(Pivot) 이라고 하며 모든 피봇이 0이 아닐 경우 특정한 해(Unique Solution)가 존재한다고 할 수 있다. 그렇지 않은 시스템은 해가 없거나 무한한 개수의 해를 가진다.
+
+
+연립방정식을 **Column form** 의 관점으로 보기로 했으니 우리가 할 것은 이를 행렬식으로 만들어주는 것이다. 위 식을 행렬로 나타내면 아래와 같이 표현할 수 있다.
+
 
 $$
-\left[\begin{array}{ccc} \text{2  1  1} \\ \text{4 -6  0} \\ \text{-2 7  2}\end{array} \right]\left[\begin{array}{ccc} u \\ v \\w \end{array} \right] = \left[\begin{array}{ccc} 5 \\ -2 \\ 9 \end{array} \right]
-\qquad \Rightarrow \qquad
-\left[\begin{array}{ccc} \text{2  1  1} \\ \text{0 -8 -2} \\ \text{0  0  1}\end{array} \right]\left[\begin{array}{ccc} u \\ v \\w \end{array} \right] = \left[\begin{array}{ccc} 5 \\ -12 \\ 2 \end{array} \right]
+\left[\begin{array}{ccc} 2 & 1 & 1 \\ 4 & -6 & 0 \\ -2 & 7 &2 \end{array} \right]\left[\begin{array}{ccc} u \\ v \\w \end{array} \right] = \left[\begin{array}{ccc} 5 \\ -2 \\ 9 \end{array} \right]
 $$
 
-- **Pivoting** : Gaussian Elimination 과정에서 피봇 자리에 0이 나타날 경우 다른 행과 자리를 바꾸어 다시 소거를 진행한다. 
 
+우리가 할 것은 가장 왼쪽 행렬을 상삼각행렬(Upper Triangular Matrix, $U$ ,행렬의 대각을 기준으로 왼쪽 아래 성분이 모두 0인 행렬)로 만드는 것이다. 상삼각행렬을 만드는 아이디어는 간단하다. (다만 계산이 복잡하다) 먼저 첫 번째 식에 적절한 수를 곱한 뒤 더하거나 빼주어 나머지 식 1열의 성분을 0으로 만든다. 위 식에서는 첫 번째 식에 2를 곱해준 뒤 두 번째식에서 그것을 빼주면 2행 1열의 성분을 0으로 만들 수 있고, 첫 번째 식과 세 번째 식을 더해주면 3행 1열의 성분을 0으로 만들 수 있다. 이를 진행하면 다음과 같이 성분이 변한다. (계산을 할 때는 오른쪽 행렬에 대해서도 모두 해주어야 한다)
 
-
-## 3) LU Factorization(Decomposition)
-
-- 위 행렬식 양변의 왼쪽에 Gaussian Elimination을 하면서 식에 곱해주었던 숫자를 성분으로 하는 행렬을 곱해준다고 하면 그 결과는 다음과 같다. 아래 식의 두 번째 줄은 첫 번째 행을 각 행에 곱해준 것( $\mathbf{E_{21}} \cdot \mathbf{E_{31}}$ )이며, 세 번째 줄은 두 번째 행을 세 번째 행에 곱해준 것( $\mathbf{E_{32}}$ )이다. (상삼각행렬을 만드는 과정을 행렬로 시각화 해준 것이라 생각할 수 있다.)
 
 $$
-\left[\begin{array}{ccc} \text{2  1  1} \\ \text{4 -6  0} \\ \text{-2 7  2}\end{array} \right]\left[\begin{array}{ccc} u \\ v \\w \end{array} \right] = \left[\begin{array}{ccc} 5 \\ -2 \\ 9 \end{array} \right]\\
-\Rightarrow \quad
-\left[\begin{array}{ccc} \text{1  0  0} \\ \text{-2 1  0} \\ \text{1  0  1}\end{array} \right]\left[\begin{array}{ccc} \text{2  1  1} \\ \text{4 -6  0} \\ \text{-2 7  2}\end{array} \right]\left[\begin{array}{ccc} u \\ v \\w \end{array} \right] = \left[\begin{array}{ccc} 5 \\ -12 \\ 14 \end{array} \right] \\
-\Rightarrow \quad
-\left[\begin{array}{ccc} \text{1  0  0} \\ \text{0  1  0} \\ \text{0  1  1}\end{array} \right]
-\left[\begin{array}{ccc} \text{1  0  0} \\ \text{-2 1  0} \\ \text{1  0  1}\end{array} \right]\left[\begin{array}{ccc} \text{2  1  1} \\ \text{4 -6  0} \\ \text{-2 7  2}\end{array} \right]\left[\begin{array}{ccc} u \\ v \\w \end{array} \right] = \left[\begin{array}{ccc} 5 \\ -12 \\ 14 \end{array} \right]
+\left[\begin{array}{ccc} 2 & 1 & 1 \\ 0 & -8 & -2 \\ 0 & 8 & 3 \end{array} \right]\left[\begin{array}{ccc} u \\ v \\w \end{array} \right] = \left[\begin{array}{ccc} 5 \\ -12 \\ 14 \end{array} \right]
 $$
 
-- 위 식의 왼쪽 부분을 나타내면 $\mathbf{U} = \mathbf{E_{32}}\mathbf{E_{31}}\mathbf{E_{21}}\mathbf{A}$ 이며, 즉 $\mathbf{A} = \mathbf{E_{21}}^{-1}\mathbf{E_{31}}^{-1}\mathbf{E_{32}}^{-1}\mathbf{U}$ 이다.  $\mathbf{E_{21}}^{-1}\mathbf{E_{31}}^{-1}\mathbf{E_{32}}^{-1}$ 을 계산하면 또한 임의의 하삼각 행렬( $\mathbf{L}$ )이 나오게 된다. 결국 임의의 정방행렬 $\mathbf{A}$ 는 $\mathbf{A} = \mathbf{L}\mathbf{U}$ (두 개의 삼각행렬, 상삼각행렬과 하삼각행렬)로 분해할 수 있다.
+
+그 다음으로 할 일도 같다. 이번에는 2번 째 식을 적절히 다루어 그 아래 식의 2열 성분을 모두 0으로 만든다. 예시에서는 2열과 3열의 성분을 더해주면 된다. 식이 3개보다 많아지더라도 이 과정을 계속해서 반복하는 것이 **가우스 소거법(Gaussian Elimination)** 이다.
+
+
+$$
+\left[\begin{array}{ccc} 2 & 1 & 1 \\ 0 & -8 & -2 \\ 0 & 0 & 1 \end{array} \right]\left[\begin{array}{ccc} u \\ v \\w \end{array} \right] = \left[\begin{array}{ccc} 5 \\ -12 \\ 2 \end{array} \right]
+$$
+
+
+이제 상삼각행렬을 만들었다. 여기서 대각 성분에 해당하는 $2, -8, 1$ 를 피봇(Pivot) 이라고 한다. 가우스 소거법 과정을 해나가면서 피봇 자리에 0이 나타날 경우는 아래에 있는 다른 행과 자리를 바꾸어 다시 소거를 진행해나가면 된다. 이 과정을 **피봇팅(Pivoting)** 이라고 한다. 예시처럼 모든 피봇이 0이 아니면 연립방정식에 **특정한 해(Unique Solution)** 가 존재한다. 반대로 그렇지 않은 연립방정식은 해가 없거나(No solution) 무한한 해(Infinite solution)를 가진다.
 
 
 
-## 4) Triangular Factors
+## LU Factorization(Decomposition)
 
-$\mathbf{A}\mathbf{x} = \mathbf{b}$ 에서 $\mathbf{L}^{-1}\mathbf{A}\mathbf{x} = \mathbf{L}^{-1}\mathbf{b}$ 이고 $\mathbf{L}^{-1}\mathbf{b} = \mathbf{c}$라 하면, $\mathbf{U}\mathbf{x} = \mathbf{c}$ 이다.
-
-- Lower Triangular Matrix
-  - $\mathbf{L}$ 로부터 가우스 소거법의 과정을 알 수 있다.
-- Upper Triangular Matrix
-  - $\mathbf{U} = \mathbf{D} \cdot \mathbf{U}^\prime$ 로 분해할 수도 있다. ( $\mathbf{U}^\prime$ 은 모든 대각 성분이 1인 상삼각행렬이다.) 즉, $\mathbf{A} = \mathbf{L}\mathbf{D}\mathbf{U}$ 로 분해가 가능하다.
-- LU factorization is Unique.
+**LU분해법(LU Factorization, LU Decomposition)** 은 특정 행렬을 하삼각행렬과 상삼각행렬의 곱으로 변환하는 것이다. 위에서 보았던 가우스 소거법을 활용하면 LU분해를 할 수 있다. 위에서 가우스 소거를 했던 예시를 통해 LU분해법에 대해 알아보자.
 
 
-
-## 5) Inverse & Transpose
-
-- 역행렬 (Inverse Matrix) : $\mathbf{A}\mathbf{A}^{-1} = \mathbf{A}^{-1} \mathbf{A} = \mathbf{I}$ (단, 모든 $\mathbf{A}$ 가 역행렬을 가지는 것은 아니다.)
-
-1. 역행렬 $\mathbf{A}^{-1}$ 는 자신의 Gaussian Elimination이 존재하며, $n$ 개의 pivot을 가지고 있다.
-2. 역행렬은 특정(Unique)하다.
-3. 영벡터가 아닌 $\mathbf{x}$ 에 대하여 $\mathbf{A}\mathbf{x} = \mathbf{0}$ 이면, $\mathbf{A}^{-1}$ 은 존재하지 않는다.
-4. 행렬곱의 역행렬을 구하면 각 행렬의 역행렬을 반대 순서로 곱한 것이 된다. $(\mathbf{A}\mathbf{B}\mathbf{C})^{-1} = \mathbf{C}^{-1}\mathbf{B}^{-1}\mathbf{A}^{-1}$
+$$
+\left[\begin{array}{ccc} 2 & 1 & 1 \\ 4 & -6 & 0 \\ -2 & 7 &2 \end{array} \right]\left[\begin{array}{ccc} u \\ v \\w \end{array} \right] = \left[\begin{array}{ccc} 5 \\ -2 \\ 9 \end{array} \right]
+\quad \Rightarrow \quad
+\left[\begin{array}{ccc} 1 & 0 & 0 \\ -2 & 1 & 0 \\ 1 & 0 & 1 \end{array} \right]\left[\begin{array}{ccc} 2 & 1 & 1 \\ 4 & -6 & 0 \\ -2 & 7 &2 \end{array} \right]\left[\begin{array}{ccc} u \\ v \\w \end{array} \right] = \left[\begin{array}{ccc} 5 \\ -12 \\ 14 \end{array} \right]
+$$
 
 
-
-- 전치행렬 (Transpose, $\mathbf{A}^T$ ) : $a_{ij} \rightarrow a_{ji}$ 
-
-  - 전치행렬의 성질
-
-  1. $(A+B)^T = A^T + B^T$
-  2. $(AB)^T = B^T A^T$
-  3. $(A^{-1})^T = (A^T)^{-1}$ at Square Matrix
-
-  - Symmetric Matrix : $A = A^T$
+위 과정은 우리가 첫 번째로 했던 1열의 성분을 0으로 만드는 과정을 행렬의 곱으로 나타낸 것이다. 화살표를 기준으로 오른 쪽 행렬의 곱셈을 진행하면 자연스럽게 그 과정이 진행된다. 물론 행렬곱의 결과는 첫 번째 과정에서 구했던 행렬과 같아진다. 기본적으로 하삼각행렬의 대각 성분은 1로 고정되며 첫 번째 식에 얼마를 곱해주고 더해주는지(혹은 빼주는지)에 대해 하삼각행렬의 첫 번째 성분이 정해진다. 위에서 두 번째식에 2를 곱해준 뒤 빼주었기 때문에 하삼각행렬의 2행 1열의 성분은 -2이고, 세 번째 식은 곱셈없이 더해주었기 때문에 1이 된다. 이번에는 두 번째(2열의 성분을 0으로 만드는) 과정을 행렬식으로 표현해보자.
 
 
+$$
+\left[\begin{array}{ccc} 1 & 0 & 0 \\ -2 & 1 & 0 \\ 1 & 0 & 1 \end{array} \right]\left[\begin{array}{ccc} 2 & 1 & 1 \\ 4 & -6 & 0 \\ -2 & 7 &2 \end{array} \right]\left[\begin{array}{ccc} u \\ v \\w \end{array} \right] = \left[\begin{array}{ccc} 5 \\ -12 \\ 14 \end{array} \right]
+\\ \Rightarrow
+\left[\begin{array}{ccc} 1 & 0 & 0 \\ 0 & 1 & 0 \\ 0 & 1 & 1 \end{array} \right]
+\left[\begin{array}{ccc} 1 & 0 & 0 \\ -2 & 1 & 0 \\ 1 & 0 & 1 \end{array} \right]\left[\begin{array}{ccc} 2 & 1 & 1 \\ 4 & -6 & 0 \\ -2 & 7 &2 \end{array} \right]\left[\begin{array}{ccc} u \\ v \\w \end{array} \right] = \left[\begin{array}{ccc} 5 \\ -12 \\ 14 \end{array} \right]
+$$
 
-- Correlation matrix , $\mathbf{R}$
-  - $\mathbf{R} = \mathbf{A}^T\mathbf{A}$ 
-  - 벡터의 내적 (성분 곱의 합) → 특정 벡터 방향으로의 사영(Projection), 상관성을 나타낸다.
+
+이 과정도 마찬가지다. 하삼각행렬 대각 성분의 값을 두 번째 식을 곱셈없이 세번째 식과 더했기 때문에 3행 2열의 성분을 1로 하였다. 식이 더 많이 늘어나더라도 위와 같이 가우스 소거의 과정을 하삼각 행렬의 곱으로 나타낼 수 있다. 각 과정에서 나온 하삼각행렬을 각각 $L_1, L_2$ 로 표현하여 상삼각행렬이 만들어지는 과정을  문자로 나타내면 아래와 같이 나타낼 수 있다. 또한 각 하삼각행렬의 역행렬을 순서대로 양변에 취해주면 행렬 $A$ 에 관한 행렬식을 만들어낼 수 있다. 
+
+
+$$
+L_2 L_1 A = U \\
+A = L_2^{-1} L_1^{-1} U
+$$
+
+
+하삼각 행렬의 역행렬을 구하여 모두 곱한 값 역시 새로운 하삼각행렬이 나오게 된다. 이 하삼각행렬을 $L$ 이라 하면 임의의 정방행렬을 하삼각행렬과 상삼각행렬로 분해할 수 있다. 이를 LU분해법이라고 한다. LU분해법은 한 행렬에 대해 각자 다른 LU분해가 있는 1:1 대응(Unique)이다. 
+
+
+$$
+A = LU
+$$
+
+
+# Inverse & Transpose
+
+## Inverse Matrix
+
+
+$$
+AA^{-1} = A^{-1}A = I \text{ (단, 모든 $A$ 가 역행렬을 가지지는 않는다.)}
+$$
+
+
+다음은 **역행렬 (Inverse Matrix)** 이 가지는 성질이다.
+
+- 역행렬 $A^{-1}$ 는 가우스 소거 과정에서 n개의 피봇을 남긴다.
+- 역행렬은 Unique 하다.
+- 영벡터가 아닌 $\mathbf{x}$ 에 대하여 $A \mathbf{x} = \mathbf{0}$ 이면, $A^{-1}$ 은 존재하지 않는다.
+- 행렬곱의 역행렬을 구하면 각 행렬의 역행렬을 반대 순서로 곱한 것이 된다.
+
+
+$$
+(ABC)^{-1} = C^{-1} B^{-1} A^{-1}
+$$
+
+
+**Gauss-Jordan Method** 는 LU분해법(가우스 소거)을 이용하여 역행렬을 구하는 방법이다. 첫 번째로 $A (A^{-1}) = I$ 를 식으로 나타낸다. 괄호안에 있는 $A^{-1}$ 은 생략하여 표기한다.  
+
+
+$$
+\left[\begin{array}{@{}ccc|ccc@{}} 2 & 1 & 1 & 1 & 0 & 0 \\ 4 & -6 & 0 & 0 & 1 & 0 \\ -2 & 7 & 2 & 0 & 0 & 1 \end{array} \right]
+$$
+
+
+이 상태에서 가우스 소거를 통해 Vertical line의 왼쪽 부분을 상삼각행렬로 만들어준다. 여전히 역행렬은 생략되어 있으므로 식으로 나타내면 $U (A^{-1}) = L^{-1} I$ 가 된다.
+
+
+$$
+\left[\begin{array}{@{}ccc|ccc@{}} 2 & 1 & 1 & 1 & 0 & 0 \\ 0 & -8 & 2 & -2 & 1 & 0 \\ 0 & 0 & 1 & -1 & 1 & 1 \end{array} \right]
+$$
+
+
+상삼각행렬의 맨 아래 피봇 식을 이용하여 왼쪽을 **대각 행렬 (Diagonal matrix)** 로 만들어준다.
+
+
+$$
+\left[\begin{array}{@{}ccc|ccc@{}} 2 & 0 & 0 & \frac{3}{2} & -\frac{5}{8} & -\frac{3}{4} \\ 0 & -8 & 0 & -4 & 3 & 2 \\ 0 & 0 & 1 & -1 & 1 & 1 \end{array} \right]
+$$
+
+
+각 행의 Diagonal 성분만큼을 나누어 주어 **단위 행렬(Identity , $I$ )** 로 만들어준다. 여전히 역행렬은 생략되어 있으므로$I (A^{-1}) = \text{(어떤 정방행렬) }B$ 로 나타낼 수 있다. 단위 행렬은 행렬곱을 해주더라도 원래의 행렬과 같기 때문에 오른쪽에 나온 행렬 $B$ 는 $A$ 의 역행렬인 $A^{-1}$ 과 같다고 할 수 있다.
+
+
+$$
+\left[\begin{array}{@{}ccc|ccc@{}} 1 & 0 & 0 & \frac{3}{4} & -\frac{5}{16} & -\frac{3}{8} \\ 0 & 1 & 0 & \frac{1}{2} & -\frac{3}{8} & -\frac{1}{4} \\ 0 & 0 & 1 & -1 & 1 & 1 \end{array} \right]
+$$
+
+
+Gauss-Jordan Method의 전체적인 과정을 다음과 같이 나타낼 수 있다.
+
+
+$$
+AA^{-1} = I \rightarrow LUA^{-1} = I \rightarrow UA^{-1} = L^{-1} I \rightarrow IA^{-1} = U^{-1}L^{-1}
+$$
+
+
+## Transpose Matrix
+
+
+$$
+A^T \quad (a_{ij}  \rightarrow a_{ji})
+$$
+
+
+ 다음은 **전치행렬 (Transpose Matrix)** 이 가지는 성질이다.
+
+
+$$
+(A+B)^T = A^T + B^T \\
+(AB)^T = B^T A^T \\
+(A^{-1})^T = (A^T)^{-1} \text{ at Square Matrix} \\
+$$
+
+
+**Symmetric Matrix** : $A = A^T$ 일 때 $A$ 를 Symmetric matrix라고 한다.
+
+**Correlation Matrix** : $R = A^T A$ 에서 R을 Correlation matrix라고 한다.
