--- a/_posts/2020-02-19-LA3.md
+++ b/_posts/2020-02-19-LA3.md
@@ -1,140 +1,127 @@
 ---
 layout: post
-title: 벡터 공간
+title: 벡터 공간 (Vector space)
 category: Linear Algebra
 tag: Linear-Algebra
 ---
 
 
 
-
-
-## 1) Vector Space & Subspace
-
-- **Space** : 덧셈과 스칼라 곱에 닫혀있는 집합
-  
-  - 임의의 벡터 $\vec{x}, \vec{y} \in \mathbb{R}$ 이고 $c \in \mathbb{R}$ 일 때, $\vec{x}, \vec{y} \in \mathbf{V}$ 이면 $c_1\vec{x} + c_2\vec{y} \in \mathbf{V}$ 이다.  
-  
-- **Subspace** : 특정 조건을 만족하는 전체 벡터 공간 내부의 부분 공간(집합)
-  
-  - Column Space of A $(\mathbb{C}(A))$ : 공간 $A$ 내부에 있는 모든 Column 벡터의 선형결합이다.
-  
-  $$
-  \mathbf{A} = \left[\begin{array}{ccc} a_1 \quad a_2 \quad a_3 \quad ... \quad a_n\end{array} \right] \quad \Rightarrow \quad \sum^n_{i=1}c_i a_i
-  $$
-  
-  - 위 식에 따라 $\mathbf{Ax} = \mathbf{b}$ 를 나타내면,
-  
-  $$
-  \mathbf{Ax} = \left[\begin{array}{ccc} a_1 \quad a_2 \quad a_3 \quad ... \quad a_n\end{array} \right]\left[\begin{array}{ccc} x_1 \\ x_2 \\ x_3 \\ ... \\ x_n\end{array} \right] = \mathbf{b} \\
-  x_1a_1 + x_2a_2 + x_3a_3 + ... + x_na_n = \sum^n_{i=1}x_ia_i = \mathbf{b}
-  $$
-  
-  만약 $\mathbf{b} \in \mathbb{C}(A)$ 라면, 최소 1개 이상의 해가 존재한다. 
+# Vector space
 
 
 
-- Vector Space ( $\mathbf{V}$ ) 내의 벡터는
+## Vector Space & Subspace
 
-1.  $\vec{v_1} \in \mathbf{V}$ , $\vec{v_2} \in \mathbf{V}$ 이면 $\vec{v_1} + \vec{v_2} \in \mathbf{V}$ 이다.  즉, 덧셈에 대해 닫혀있다.
-2. $\vec{v} \in \mathbf{V}$ , $c \in \mathbf{R}$ 이면 $c \vec{v} \in \mathbf{V}$ 이다. 즉, 스칼라 곱에 대해 닫혀있다.
-3. $\mathbf{V}$ 는 영벡터를 포함한다.
+**벡터 공간(Vector space)** 은 특정 벡터의 덧셈과 스칼라 곱에 닫혀있는 집합이다. 임의의 벡터 $\vec{x}, \vec{y} \in \mathbb{R}$ 와 임의의 스칼라 $c \in \mathbb{R}$ 가 있을 때 $\vec{x}, \vec{y} \in \mathbf{V}$ 이면 $c_1\vec{x} + c_2\vec{y} \in \mathbf{V}$ 이다. **부분공간(Subspace)** 은 벡터 공간 내에서 특정 조건을 만족하는 부분 공간(집합)이다. 
 
 
 
-- Column space of $A$ ( $\mathbb{C}(A)$ ) : $\mathbf{A}$ 내에 있는 열벡터들의 선형 결합들의 집합.
-- Null space of $A$ ( $\mathbb{N}(A)$ ) : $\mathbf{Ax} = 0$ 을 만족시키는 벡터의 집합.
-  - Null space 도 덧셈과 스칼라 곱에 닫혀있다.
+## Solving Ax=0 & Ax=b
 
-<br/>
+[이전 게시물]([https://yngie-c.github.io/linear%20algebra/2020/02/18/LA2/](https://yngie-c.github.io/linear algebra/2020/02/18/LA2/)) 에서는 가우스 소거법을 이용해서 정방행렬 $A$ 로 나타나는 연립방정식의 해를 구해보았다. 이번에는 $A_{m \times n} & (단, m < n)$ 인 $A$ 에 대해 $Ax=0$ 혹은 $Ax=b$ 를 풀어본다. 먼저 좀 더 간단해보이는 $Ax=0$ 을 풀어보자. 아래 예시는 3행(식이 3개) 4열(미지수가 4개)인 연립방정식이다.
 
-## 2) Solving Ax=0 & Ax=b
-
-이 부분에서는 $A_{m \times n} \text{ }(단, m < n)$ 인 경우에 대한 $\mathbf{Ax}=0$ 혹은 $\mathbf{Ax}=b$ 를 푸는 방법에 대해 배운다.
-
-- 먼저, $\mathbf{Ax}=0$ 이다. 아래의 문제를 보자. 행이 3개(식이 3개)이고 열이 4개(미지수가 4개)인 연립방정식이다. 아래의 왼쪽 행렬은 Gaussian Elimination을 통해 그 아래처럼 나타낼 수 있다.  
 
 $$
-\left[\begin{array}{ccc} 1 \quad 3 \quad 3 \quad 2 \\ 2 \quad 6 \quad 9 \quad 7 \\ -1 -3 \quad 3 \quad 4\end{array} \right]\left[\begin{array}{ccc} u \\ v \\ w \\ z\end{array} \right] = \left[\begin{array}{ccc} 0 \\ 0 \\ 0 \end{array} \right]
+\left[\begin{array}{cccc} 1 & 3 & 3 & 2 \\ 2 & 6 & 9 & 7 \\ -1 & -3 & 3 & 4\end{array} \right]\left[\begin{array}{c} u \\ v \\ w \\ z\end{array} \right] = \left[\begin{array}{c} 0 \\ 0 \\ 0 \end{array} \right]
 $$
 
-$$
-\left[\begin{array}{ccc} 1 \quad 3 \quad 3 \quad 2 \\ 2 \quad 6 \quad 9 \quad 7 \\ -1 -3 \quad 3 \quad 4\end{array} \right] \Rightarrow \left[\begin{array}{ccc} 1 \quad 3 \quad 3 \quad 2 \\ 0 \quad 0 \quad 1 \quad 1 \\ 0 \quad 0 \quad 0 \quad 0\end{array} \right] \Rightarrow \left[\begin{array}{ccc} 1 \quad 3 \quad 0  -1 \\ 0 \quad 0 \quad 1 \quad 1 \\ 0 \quad 0 \quad 0 \quad 0\end{array} \right]
-$$
 
-- 이 과정에서 최종으로 나온 행렬의 형태를 Row Reduced from, $\mathbf{R}$ 이라 한다. $\mathbf{R}$ 의 각 피봇은 1, 1 이고 이에 해당하는 미지수는 $u, w$ 이다. 피봇이 가리키고 있는 미지수를 Pivot Variable이라 하며, 나머지 미지수는 Free Variable이라고 한다. 이를 통해 구한 해는 다음과 같다.
+왼쪽 $A$ 에 해당되는 행렬의 행을 서로 곱하고 빼주면 아래처럼 변환할 수 있다. 첫 번째는 가우스 소거를 통해서 상삼각행렬과 비슷한 모양으로 만든 것이다. 가운데 있는 행렬의 모습을 Echelon form이라고도 한다. 두 번째는 Echelon form에서 영벡터가 아닌 가장 아래 행을 조작하여 그 위에 있는 행의 특정 열 성분을 0으로 만든 것이다. 이렇게 해서 나온 마지막 행렬의 모양을 **Row reduced form, $R$** 이라고 한다. 오른쪽은 모든 성분이 0인 영벡터이므로 일련의 계산과정을 해주어도 값에 변화가 없다. 
+
 
 $$
-\left[\begin{array}{ccc} u \\ v \\ w \\ z\end{array} \right] = \left[\begin{array}{ccc} -3v+z \\ v \\ -z \\ z\end{array} \right] = v\left[\begin{array}{ccc} -3 \\ 1 \\ 0 \\ 0\end{array} \right] + z\left[\begin{array}{ccc} 1 \\ 0 \\ -1 \\ 1\end{array} \right] \in \mathbb{N}(A)
+\left[\begin{array}{cccc} 1 & 3 & 3 & 2 \\ 2 & 6 & 9 & 7 \\ -1 &-3 & 3 & 4\end{array} \right] \Rightarrow \left[\begin{array}{cccc} 1 & 3 & 3 & 2 \\ 0 & 0 & 1 & 1 \\ 0 & 0 & 0 & 0\end{array} \right] \Rightarrow \left[\begin{array}{cccc} 1 & 3 & 0 & -1 \\ 0 & 0 & 1 & 1 \\ 0 & 0 & 0 & 0\end{array} \right]
 $$
 
-- 이를 일반화하여 $\mathbf{Ax} = \mathbf{b}$ 에 대한 해를 구하는 과정으로 확장하면, $\mathbf{b} = (1, 5, 5)^T$ 일 때, 다음과 같은 과정으로 나타낼 수 있다.
+Row reduced form 의 피봇은 1행 1열의 성분 1과 2행 3열의 성분 1이다. 1열과 3열에 해당하는 미지수는 $u, w$ 이다. 피봇이 가리키고 있는 미지수를 Pivot variable이라 하며, 나머지 미지수 $v, z$ 는 Free variable이라고 한다. 이를 통해 해를 구할 수 있다. 일단 각 미지수에 대한 식을 Free variable로 정리한다. 아래 식의 첫 번째 등호가 이 과정이다. 두 번째는 Free variable로 묶는다. 두 번째 등호가 이 과정이다.
+
 
 $$
-\left[\begin{array}{ccc} 1 \quad 3 \quad 3 \quad 2 \\ 2 \quad 6 \quad 9 \quad 7 \\ -1 -3 \quad 3 \quad 4\end{array} \right]\left[\begin{array}{ccc} u \\ v \\ w \\ z\end{array} \right] = \left[\begin{array}{ccc} 1 \\ 5 \\ 5 \end{array} \right] \quad \Rightarrow \quad \left[\begin{array}{ccc} 1 \quad 3 \quad 0  -1 \\ 0 \quad 0 \quad 1 \quad 1 \\ 0 \quad 0 \quad 0 \quad 0\end{array} \right]\left[\begin{array}{ccc} u \\ v \\ w \\ z\end{array} \right] = \left[\begin{array}{ccc} -2 \\ 1 \\ 0 \end{array} \right]
+\left[\begin{array}{c} u \\ v \\ w \\ z\end{array} \right] = \left[\begin{array}{c} -3v+z \\ v \\ -z \\ z\end{array} \right] = v\left[\begin{array}{ccc} -3 \\ 1 \\ 0 \\ 0\end{array} \right] + z\left[\begin{array}{c} 1 \\ 0 \\ -1 \\ 1\end{array} \right] \in \mathbb{N}(A)
 $$
 
-- 위와 같이 Pivot Variable과 Free Variable을 설정하고 해를 구하면,
+
+
+이 해는 $A$ 행렬의 Null space를 만족하며 이 때의 해를 **Special solution , $X_n$** 이라고 한다. 이 Null space를 활용하여 $Ax = b$의 해도 구할 수 있다. $b = [1, 5, 5]^T$ 인 예를 들어 생각해보자. Row reduced form 으로 다음과 같이 변환할 수 있다.
+
 
 $$
-\left[\begin{array}{ccc} u \\ v \\ w \\ z\end{array} \right] = \left[\begin{array}{ccc} -3v+z \\ v \\ -z \\ z\end{array} \right] = v\left[\begin{array}{ccc} -3 \\ 1 \\ 0 \\ 0\end{array} \right] + z\left[\begin{array}{ccc} 1 \\ 0 \\ -1 \\ 1\end{array} \right] + \left[\begin{array}{ccc} -2 \\ 0 \\ 1 \\ 0\end{array} \right]
+\left[\begin{array}{cccc|c} 1 & 3 & 3 & 2 & 1 \\ 2 & 6 & 9 & 7 & 5 \\ -1 &-3 & 3 & 4 & 5\end{array} \right] \Rightarrow \left[\begin{array}{cccc|c} 1 & 3 & 0 & -1 & -2 \\ 0 & 0 & 1 & 1 & 1 \\ 0 & 0 & 0 & 0 & 0 \end{array} \right]
 $$
 
-- 이것은 이전에 Null space에서 구했던 부분( $\mathbf{X}_n$ , Special solution)와 $\mathbf{b}$ 에 의해 특별히 생성된 부분( $\mathbf{X}_p$ , Particular solution) 로 나눌 수 있다. $\mathbf{Ax} = \mathbf{b}$ 의 해를 구하는 방법을 다시 정리하면 다음과 같다.
 
-1. Row reduced form의 형태로 식을 정렬한다.
+$b \neq 0$ 일 때의 해는 Special solution을 활용하여 쉽게 구할 수 있다. Special solution에 $b$ 에서 변형된 행렬의 성분을 더해주면 된다. 이렇게 구한 연립방정식의 해는 다음과 같다.
+
+
+$$
+\left[\begin{array}{ccc} u \\ v \\ w \\ z\end{array} \right] = \left[\begin{array}{ccc} -3v+z-2 \\ v \\ -z+1 \\ z\end{array} \right] = v\left[\begin{array}{ccc} -3 \\ 1 \\ 0 \\ 0\end{array} \right] + z\left[\begin{array}{ccc} 1 \\ 0 \\ -1 \\ 1\end{array} \right] + \left[\begin{array}{ccc} -2 \\ 0 \\ 1 \\ 0\end{array} \right]
+$$
+
+
+
+여기서 Special solution 뒤에 새로 더해진 부분은 **Particular solution, $X_p$** 라고 한다. 지금까지 살펴본 $Ax = b$ 의 해를 구하는 과정을 정리하면 아래와 같이 4단계로 나눌 수 있다.
+
+1. Row reduced form 의 형태로 식을 정렬한다.
 2. Pivot variable과 Free variable로 나눈다.
 3. Null space를 만족하는 Special solution을 찾는다.
 4. Particular solution을 찾는다.
 
-<br/>
-
-## 3) Linear Independence, Basis, Dimension
-
-- **Linear Independence**
-  $$
-  c_1\vec{v_1} + c_2\vec{v_2} + ... + c_n\vec{v_n} = 0 \quad 이면, \quad 
-  c_1 = c_2 = ... = c_n = 0 \quad 이다.
-  $$
-
-  - 만약 Gaussian Elimination을 진행한 $A$ 에 Non-zero 벡터가 $m$ 개라면, $A$ 내에는 $m$ 개의 독립적인 벡터가 있는 것이다.
 
 
+# Linearly Independence
 
-- **Rank**
-  - 독립적인 열벡터의 개수
-  - 독립적인 행벡터의 개수
-  - Gaussian Elimination이후에 남는 Pivot의 개수
-  - $\mathbb{C}(A)$ (Column space)의 차원
+## Linearly Independence, Basis & Dimension
 
+다음의 식을 만족하는 벡터 $(\vec{v_1}, \vec{v_2}, ..., \vec{v_n)$ 을 **선형 독립(Linearly Independence)** 이라고 한다. 
+$$
+c_1\vec{v_1} + c_2\vec{v_2} + ... + c_n\vec{v_n} = 0 \quad 이면, \quad 
+c_1 = c_2 = ... = c_n = 0 \quad 이다.
+$$
 
-
-- **Spanning** : 벡터 스페이스를 구성하는 모든 벡터들의 선형결합
-- **Basis**
-  - 벡터 스페이스를 Span 할 수 있는 최소한의 선형 독립 벡터의 개수
-    - 선형 결합은 Basis에 대해 Unique하다.
-    - 하지만, Basis가 벡터 스페이스에 대해 Unique하지는 않다.
+행렬 $A$ 에서 가우스 소거를 진행하였을 때 영벡터가 아닌 열벡터가 $m$ 개이면 행렬 $A$ 내에는 $m$ 개의 Linearly Independent한 벡터가 있다.  **Spanning** 은 벡터 공간을 구성하는 모든 벡터의 선형결합이다. 
 
  <br/>
 
-## 4) Fundamental Subspace in A ($A_{m \times n}$)
+행렬 $A$의 **랭크 (Rank)** 는 다음과 같은 것을 나타낸다. 독립적인 열벡터(혹은 행벡터)의 개수. 가우스 소거 이후에 남는 피봇의 개수. $\mathbb{C}(A)$ (Column space)의 차원.
 
-- Column Space $(\mathbb{C}(A))$ : 열벡터들의 선형 결합 $\quad \rightarrow \quad \subset \mathbb{R^m}$
-- Null Space $(\mathbb{N}(A))$ : $\{\mathbf{x} \vert \mathbf{Ax} = 0\}$ $\quad \rightarrow \quad \subset \mathbb{R^n}$
-
-- Row Space $(\mathbb{C}(A^T))$ : 행벡터들의 선형 결합 $\quad \rightarrow \quad \subset \mathbb{R^n}$ 
-- Left Null Space $\mathbb{N}(A^T)$ :  $\{\mathbf{y} \vert \mathbf{Ay} = 0\}$ $\quad \rightarrow \quad \subset \mathbb{R^m}$
-
-<br/>
-
-## 5) Existance of Inverse
-
-1. Square matrix : $\mathbf{A}\mathbf{A}^{-1} = \mathbf{A}^{-1}\mathbf{A} = \mathbf{I}$ 
-2. $\mathbf{A}_{m \times n}, (m < n)$ : Only Right Inverse $(\mathbf{A}\mathbf{A}^{-1})$
-3. $\mathbf{A}_{m \times n}, (m > n)$ : Only Left Inverse $(\mathbf{A}^{-1}\mathbf{A})$
+**기저 (Basis)** 는 벡터 공간을 Span 할 수 있는 최소 선형 독립 벡터의 개수이다. 선형 결합은 Basis에 Unique 하지만 Basis가 벡터 공간에 대해 Unique하지는 않다.
 
 
+## Fundamental Subspace in A ($A_{m \times n}$)
 
-## 6) Linear Transformation
+**Column Space(열벡터공간) $(\mathbb{C}(A))$** 은 열벡터들을 Span했을 때의 공간이다. $ \subset \mathbb{R^m}$
 
-d
+**Null Space(영공간) $(\mathbb{N}(A))$** 은 $\{\mathbf{x} \vert \mathbf{Ax} = 0\}$ 조건을 만족하는 공간이다. $ \subset \mathbb{R^n}$
+
+**Row Space(행벡터공간) $(\mathbb{C}(A^T))$** 은 행벡터들을 Span했을 때의 공간이다. $ \subset \mathbb{R^n}$ 
+
+**Left Null Space(왼쪽-영공간) $\mathbb{N}(A^T)$** 은  $\{\mathbf{y} \vert \mathbf{Ay} = 0\}$ 조건을 만족하는 공간이다. $ \subset \mathbb{R^m}$
+
+Column space-Null space, Row space-Left Null space 끼리 짝을 이룬다. 간단한 예시를 통해 행렬의 부분공간에 대해 알아볼 수 있다. 다음과 같은 행렬 $A$ 가 있다고 하자.
+
+
+$$
+A = \left[\begin{array}{ccc} 1 & 0 & 0 \\ 0 & 0 & 0 \end{array} \right] \quad 
+A^T = \left[\begin{array}{ccc} 1 & 0 \\ 0 & 0 \\ 0 & 0 \end{array} \right]
+$$
+
+
+행렬 $A$ 의 부분공간을 각각 구하면 다음과 같다.
+
+
+$$
+\mathbb{C}(A) = c \left[\begin{array}{c} 1 \\ 0 \end{array} \right] \subset \mathbb{R^2} \quad \mathbb{N}(A) = x_2 \left[\begin{array}{c} 0 \\ 1 \\ 0 \end{array} \right] + x_3 \left[\begin{array}{c} 0 \\ 0 \\ 1 \end{array} \right] \subset \mathbb{R^3} \\ 
+\mathbb{N}(A^T) = y_2 \left[\begin{array}{c} 0 \\ 1 \end{array} \right] \subset \mathbb{R^2} \quad \mathbb{C}(A^T) = c \left[\begin{array}{c} 1 \\ 0 \\ 0 \end{array} \right] \subset \mathbb{R^3} \qquad \qquad
+$$
+
+
+## 역행렬의 존재
+
+행렬 $A$가 정방행렬(Square matrix) 일 때 역행렬이 존재하면 $AA^{-1} = A^{-1} A = I$ 의 식이 성립한다. $A$가 정방행렬이 아닌 경우를 생각해보자. 먼저 $A_{m \times n}, (m < n)$ 인 경우에는 존재하는 역행렬이 오직 오른쪽에만 위치할 수 있기 때문에 Right Inverse라고 한다. 수식으로 나타내면 $AA^{-1}$ 라고 한다. 반대로 $(m > n)$ 인 행렬 $A$ 의 경우 존재하는 역행렬이 오직 왼쪽에만 위치하기 때문에 Left Inverse라고 한다. 
+
+
+
+## 선형 변환(Linear Transformation)
+
+추후에 추가
