--- a/_posts/2020-03-09-LA4.md
+++ b/_posts/2020-03-09-LA4.md
@@ -1,15 +1,15 @@
 ---
 layout: post
-title: 벡터의 직교성(Orthogonality)
+title: 벡터의 직교성 (Orthogonality)
 category: Linear Algebra
 tag: Linear-Algebra
 ---
 
 
 
+# Orthogonal Vector Space
 
-
-## 1) Orthogonal Vector Space & Subspace
+## Orthogonal Vector Space & Subspace
 
 - 왜 **직교벡터** (Orthogonal Vector)가 중요한가?
   - 선형 독립인 기저(Basis) 벡터
