--- a/_posts/2020-06-20-nlp_lda.md
+++ b/_posts/2020-06-20-nlp_lda.md
@@ -119,7 +119,7 @@ $$
 
 각 $\alpha$ 값에 대한 디리클레 분포 변화를 살펴보자. 아래 그림에서 $\alpha$ 가 **큰 값(100)일 때는 모든 케이스가 비슷한 확률로 추정** 되지만 $\alpha$ 가 **작아질수록 점점 극단적** 으로 분포가 변해가는 것을 볼 수 있다. 
 
-<img src="https://user-images.githubusercontent.com/45377884/85116464-54ee7000-b258-11ea-8dbd-a84d59bb5d99.png" alt="lda_alpha" style="zoom:67%;" />
+<p align="center"><img src="https://user-images.githubusercontent.com/45377884/85116464-54ee7000-b258-11ea-8dbd-a84d59bb5d99.png" alt="lda_alpha" style="zoom:67%;" /></p>
 
 <p align="center" style="font-size:80%">이미지 출처 : <a href="https://github.com/pilsung-kang/text-analytics">Text-Analytics Github</a></p>
 
@@ -198,7 +198,7 @@ p(z_i=j|\mathbf{z}_{-i}) = \frac{n^d_{-i, j} + \alpha}{n^d_{-i, \cdot} + K\alpha
 $$
 
 
-Eq. 1에 있는 두 항을 모두 변형된 식으로 고쳐 쓰면 $p(z_i=j|\mathbf{z}_{-i}, \mathbf{w})$ 를 다음과 같이 나타낼 수 있다.
+Eq. 1에 있는 두 항을 모두 변형된 식으로 고쳐 쓰면 $p(z_i=j \vert \mathbf{z}_{-i}, \mathbf{w})$ 를 다음과 같이 나타낼 수 있다.
 
 
 $$
