--- a/_posts/2020-07-02-tree.md
+++ b/_posts/2020-07-02-tree.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Tree
+title: 트리 (Tree)
 category: Data Structure
 tag: Data Structure
 ---
@@ -61,7 +61,9 @@ tag: Data Structure
 
 트리 구조에 존재하는 엣지의 개수는 (노드 개수 - 1)이다. 루트를 제외한 모든 노드가 가리킴을 받기 때문이다.
 
-그리고 특정 조건에서 노드의 개수를 구할 수 있다. 트리의 차수가 $d$ 일 때, 깊이 $i$ 에서의 최대 노드 개수는 $d^i$ 이다. 동일하게 생각해보면 차수가 $d$ 이고 높이가 $h$ 인 트리의 최대 Leaf의 개수는 $d^h$ 이다. 예를 들어, 차수가 $4$ 인 높이 $3$ 인 Full Tree라면 깊이 $3$ 에서의 노드 개수(= 해당 트리의 Leaf의 개수)는 $4^3 = 64$ 이다. 또한 트리의 Degree가 $d$ 일 때, 높이 $h$ 에서의 최대 노드 개수는 $1+d+d^2+ \cdots + d^h = \frac{d^{h+1} - 1}{d - 1}$ 이다. 따라서, 차수가 $4$ 인 높이 $3$ 인 Full Tree에 있는 노드의 개수는 $\frac{4^{3+1} - 1}{4 - 1} = \frac{255}{3} = 85$ 이다. 
+그리고 특정 조건에서 노드의 개수를 구할 수 있다. 트리의 차수가 $d$ 일 때, 깊이 $i$ 에서의 최대 노드 개수는 $d^i$ 이다. 동일하게 생각해보면 차수가 $d$ 이고 높이가 $h$ 인 트리의 최대 Leaf의 개수는 $d^h$ 이다. 예를 들어, 차수가 $4$ 인 높이 $3$ 인 Full Tree라면 깊이 $3$ 에서의 노드 개수(= 해당 트리의 Leaf의 개수)는 $4^3 = 64$ 이다.
+
+또한, 트리의 Degree가 $d$ 일 때, 높이 $h$ 에서의 최대 노드 개수는 $1+d+d^2+ \cdots + d^h = \frac{d^{h+1} - 1}{d - 1}$ 이다. 따라서, 차수가 $4$ 인 높이 $3$ 인 Full Tree에 있는 노드의 개수는 $\frac{4^{3+1} - 1}{4 - 1} = \frac{255}{3} = 85$ 이다. 
 
 Complete Tree에 대해서는 차수가 $d$ 이고 크기가 $s$일 때의 높이 $h$ 를 $h = \log_d(s(d-1)+1)-1$ 식을 구할 수 있다. 
 
