add_code_annotation

--- a/_posts/2020-07-06-bst.md
+++ b/_posts/2020-07-06-bst.md
@@ -371,7 +371,6 @@ def traverseInOrder(self, node=None):
 둘 다 존재하지 않을 때, 혹은 이미 탐색한 노드일 때
 현재 노드의 값을 추가한다.
 """
-
 def traversePostOrder(self, node=None):
     if node is None:
         node = self.root
@@ -414,16 +413,27 @@ def traversePostOrder(self, node=None):
 
 ```python
 def traverseLevelOrder(self):
+    """
+    먼저 큐를 만들고 루트 노드의 값을 추가한다.
+    """
     ret = []
     Q = Queue()
     Q.enqueue(self.root)
     
+    """
+    아래의 과정을 큐가 비어있을 때까지 반복한다.
+    """
     while not Q.isEmpty():
+        """
+    	첫 번째 값을 Dequeue하여 뽑아낸다.
+    	"""
         node = Q.dequeue()
         if node is None:
             continue
-
-        ret.append(node.getValue())
+		ret.append(node.getValue())
+        """
+    	그 노드에서 LHS와 RHS가 가리키는 값을 Enqueue한다.
+    	"""
         if node.getLHS() is not None:
             Q.enequeue(node.getLHS())
         if node.getRHS() is not None:
