--- a/_posts/2020-04-04-mle_map.md
+++ b/_posts/2020-04-04-mle_map.md
@@ -9,7 +9,7 @@ tag: Machine-Learning
 
 
 
-# MLE
+# 최대 우도 추정
 
 본 챕터에서는 **최대 우도 추정(Maximum Likelihood)** 에 대해서 알아보겠습니다. 최대 우도 추정을 알기위해 필요한 이항 분포(Binomial distribution)에 대해서 알아봅시다.
 
@@ -19,9 +19,9 @@ tag: Machine-Learning
 
 아래와 같이 생긴 압정을 던져 가운데 압정처럼 뒤집어진 모양이 나올지, 아니면 양 옆에 위치한 압정처럼 엎어진 모양이 나올지를 예측하는 게임을 한다고 가정해봅시다. 이 때 편의상 엎어진 모양을 머리(Head, H)라고 하고 뒤집어진 모양을 꼬리(Tail, T)라고 표현합니다.
 
-<img src="https://live.staticflickr.com/4106/4983417622_e29e2c3008_b.jpg" alt="thumbtack" style="zoom:50%;" />
+<p align="center"><img src="https://live.staticflickr.com/4106/4983417622_e29e2c3008_b.jpg" alt="thumbtack" style="zoom:50%;" /></p>
 
-<p align="center" style="font-size:80%">이미지 출처 : <a href="https://www.flickr.com/photos/22994840@N03/4983417622/sizes/l/">Flicker/thumbtack</a></p>
+<p align="center" style="font-size:80%">이미지 출처 : <a href="https://www.flickr.com/photos/22994840@N03/4983417622/sizes/l/">flicker.com</a></p>
 
 이 게임을 할 때 압정을 던지는 행위는 연속적(Continuous)이지 않습니다. 던지는 횟수가 1.123...번, 3.1415... 번과 같이 될 수 없고 1번, 2번, 3번 ... 과 같이 일종의 마디를 가지고 증가하기 때문입니다. 그렇기 때문에 이 게임에서 압정을 던지는 행위는 이산적(Discrete)이라고 할 수 있습니다. 그리고 이산적인 행위에서 특정 사건이 발생할 확률의 분포를 **이산 확률 분포(Discrete probability distribution)** 라고 합니다.
 
@@ -52,7 +52,7 @@ $$
 
 ## Maximum Likelihood Estimation(최대 우도 추정)
 
-특정 데이터셋으로부터 사건이 일어날 확률을 구하는 것은 중요합니다. 압정 게임이든 내일 비가 올 지 맑을지 예측하든 확률을 알아야 그에 맞춰 행동할 수 있기 때문입니다. 그렇다면 데이터셋 $D$ 로부터 압정 게임에서 머리(H)가 발생할 확률 $p$ 는 어떻게 추정할 수 있을까요? 우리가 알아볼 **최대 우도 추정(Maximum Likelihood Estimation)** 은 확률 $p$ 추정하기 위한 하나의 방법입니다. 최대 우도 추정은 말 그대로 현재 가지고 있는 데이터셋이 나올 확률을 최대화하는 우도(Likelihood) $\theta$ 를 구하는 것입니다. 수식으로는 아래와 같이 나타낼 수 있습니다.
+특정 데이터셋으로부터 사건이 일어날 확률을 구하는 것은 중요합니다. 압정 게임이든 내일 비가 올 지 맑을지 예측하든 확률을 알아야 그에 맞춰 행동할 수 있기 때문입니다. 그렇다면 데이터셋 $D$ 로부터 압정 게임에서 머리(H)가 발생할 확률 $p$ 는 어떻게 추정할 수 있을까요? 우리가 알아볼 **최대 우도 추정(Maximum Likelihood Estimation)** 은 확률 $p$ 추정하기 위한 하나의 방법입니다. 최대 우도 추정은 말 그대로 현재 가지고 있는 데이터셋이 나올 확률을 최대화하는 우도(Likelihood) $\theta$ 를 구하는 것입니다. 아래 그래프는 최대 우도 추정을 설명하기 위한 그래프입니다. 수식으로는 아래와 같이 나타낼 수 있습니다.
 
 
 
@@ -60,10 +60,13 @@ $$
 \hat{\theta} = \text{argmax}_{\theta} P(D \vert \theta)
 $$
 
+위 식에서 $\hat{\theta}$ 는 $P(D \vert \theta)$ 를 최대로 하는 $\theta$ 입니다. 예를 들어, 특정 사건의 확률 $\theta$ 가 [0,1] 사이의 범위일 때 특정 데이터셋 $D$ 가 나올 확률 $P(D \vert \theta)$ 가 아래 그래프의 붉은 곡선과 같다고 합시다. (주어지는 데이터셋 $D$ 에 따라 그래프의 모양은 달라질 수 있습니다.) 
 
+<img src="https://i.stack.imgur.com/Mmals.png" alt="mle_graph" style="zoom:67%;" />
 
-위 식에서 $\hat{\theta}$ 는 $P(D \vert \theta)$ 를 최대로 하는 $\theta$ 입니다. 위에서 알아본 식을 사용하여 이 식을  다음과 같이 나타낼 수 있습니다.
+<p align="center" style="font-size:80%">이미지 출처 : <a href="https://stats.stackexchange.com/questions/166558/interpretation-maximum-likelihood-plot">Stackoverflow.com</a></p>
 
+최대 우도 추정은 위 그래프에서 확률이 최대인 점의 $\theta$ 를 찾는 과정입니다. 주어진 데이터셋에 가장 Fit한 $\theta$ 를 찾는 과정이라고 말할 수 있겠습니다. 위에서 알아본 식을 다음과 같이 나타낼 수 있습니다.
 
 $$
 \hat{\theta} = \text{argmax}_{\theta} P(D \vert \theta) = \text{argmax}_{\theta} \theta^{\alpha_H}(1 - \theta)^{\alpha_T} \\
@@ -91,7 +94,7 @@ $$
 
 동일한 비율을 가진 두 개의 데이터셋을 예로 들어봅시다. 한 데이터셋은 5번 던져 머리가 3번, 꼬리가 2번 나왔다고 합니다. 나머지 하나의 데이터셋은 50번 던져 머리가 30번, 꼬리가 20번 나온 경우입니다. 두 데이터셋 모두 최대 우도 추정을 통해 사건의 확률을 구하면 $\hat{\theta} = 0.6 = 3/(3+2) = 30/(30+20)$ 입니다. 그렇다면 두 데이터셋은 아무런 차이가 없는 것일까요? 데이터셋이 가지는 비율만 일정하다면 더 큰 데이터셋이 주는 이점은 없을까요?
 
-질문에 대한 답은 "아니다"입니다. 일단 우리가 지금까지 알아본 $\hat{\theta}$ 은 그저 추정값일뿐 실제 확률이 아닙니다. 추정값은 언제나 실제값과 오차가 있기 마련입니다. 오차는 둘 사이의 차이이므로 절댓값을 활용하여 $\vert \hat{\theta} - \theta^\* \vert$ 로 나타낼 수 있습니다. 수학자들은 이 오차에 수학적 기술을 적용하여 오차의 범위(Error bound)를 구하는 식을 만들어 놓았습니다. 오차의 범위를 구하는 식은 아래와 같습니다.
+질문에 대한 답은 "아니다"입니다. 일단 우리가 지금까지 알아본 $\hat{\theta}$ 은 그저 추정값일뿐 실제 확률이 아닙니다. 추정값은 언제나 실제값과 오차가 있기 마련입니다. 오차는 둘 사이의 차이이므로 절댓값을 활용하여 $\vert \hat{\theta} - \theta^\* \vert$ 로 나타낼 수 있습니다. 수학자들은 이 오차에 수학적 기술을 적용하여 **오차의 범위(Error bound)** 를 구하는 식을 만들어 놓았습니다. 오차의 범위를 구하는 식은 아래와 같습니다.
 
 
 $$
@@ -104,11 +107,11 @@ $$
 
 
 
-# MAP
+# 최대 사후 확률 추정
 
-## Incorporating Prior Knowledge
+## 사전 지식 포함시키기
 
-MLE 말고도 확률을 바라보는 다른 관점이 있다. MLE는 우리가 알고 있는 사전 지식을 확률에 반영하지 않는다. 새로운 관점은 확률 계산에 사전 지식 $P(\theta )$ 을 넣는다. 그렇게 계산되어 나오는 확률은 MLE에서 계산했던 $P(D \vert \theta)$ 가 아닌 $P(\theta \vert D)$ 이다. MLE에서는 주어진 $\theta$ 에 대해서 $D$ 가 발생할 확률을 구했다면, **MAP(Maximum a Posterior Estimation)** 에서는 주어진 $D$ 에 대해서 $\theta$ 인 확률, 즉 사후 확률(Posterior)을 구한다.
+지금까지 최대 우도 추정에 대해 알아보았습니다. 하지만 최대 우도 추정말고도 확률 $\theta$ 를 추정하기 위한 다른 관점의 방법이 있습니다. 이를 **최대 사후 확률 추정(Maximum a Posterior Estimation)** 이라고 합니다. 최대 우도 추정이 주어진 데이터셋 $D$ 가 나올 가능성을 최대로 하는 $\theta$ 를 구하는 것이었다면, 최대 사후 확률 추정은 말 그대로 사후 확률(Posterior)을 최대화 하는 과정입니다. 그렇기 때문에 최대 우도 추정에서는 사용하지 않았던 사전 지식(Prior knowledge)에 대한 Term이 추가됩니다. 아래는 베이즈 정리[^2]를 사용하여 사후 확률을 구하는 수식입니다.
 
 
 $$
@@ -118,9 +121,13 @@ $$
 
 
 
-## Bayes Viewpoint
 
-위 식에서 $P(D)$ 는 상수이므로 $P(\theta \vert D) \propto P(D \vert \theta) P(\theta)$ 로 나타낼 수 있다. 여기서 $P(D \vert \theta) = \theta^{a_H}(1 - \theta)^{a_T}$ 로 나타낼 수 있다. 사전 지식인 $P(\theta)$ 는 Beta distribution(베타 분포)를 사용해서 구할 수 있다.
+## 베이즈 관점에서 바라보기
+
+위에서 구한 식에서 $P(D)$ 는 $P(\theta \vert D)$ 를 $[0,1]$ 사이의 값으로 만들어주기 위한 정규화 상수(Normalizing Constant) 입니다. 해당 상수는 사후 확률에 아무 영향을 주지 않기 때문에 $P(\theta \vert D) \propto P(D \vert \theta) P(\theta)$ 로 나타낼 수 있습니다.
+
+그렇다면 사전 지식에 해당하는 $P(\theta)$ 는 어떻게 구할 수 있을까요? 압정을 던지는 행위와 같은 베르누이 시행이라면 베타 분포(Beta distribution)를 사용합니다. 베타 분포에 대한 더 자세한 이야기는 [확률 분포](https://yngie-c.github.io/machine learning/2020/04/04/prob_and_dist/) 에서 볼 수 있습니다. 여기서는 그냥 이 분포를 사용한다는 것만 알아두고 넘어가도록 합시다. 베타 분포를 사용하여 사전 확률 $P(\theta)$ 을 추정하면 다음과 같습니다. 
+
 
 
 $$
@@ -132,26 +139,57 @@ $$
 
 ## Maximum a Posteriori Estimation(최대 사후 확률 추정)
 
-위에서 나온 식을 같은 밑끼리 정리하면 아래와 같이 쓸 수 있다. 
+이제 $P(D \vert \theta) P(\theta)$ 식에서 각 항의 값을 알고 있으므로 아래과 같이 식을 정리할 수 있습니다.
 
 
 $$
-P(\theta \vert D) \propto P(D \vert \theta) P(\theta) =  \theta^{a_H}(1 - \theta)^{a_T} \cdot \theta^{\alpha-1}(1 - \theta)^{\beta-1} = \theta^{a_H + \alpha -1}(1 - \theta)^{a_T +\beta-1}
+P(D \vert \theta) P(\theta) =  \theta^{\alpha_H}(1 - \theta)^{\alpha_T} \cdot \theta^{\alpha-1}(1 - \theta)^{\beta-1} = \theta^{\alpha_H + \alpha -1}(1 - \theta)^{\alpha_T +\beta-1}
 $$
 
 
-MLE에서 $P(D \vert \theta) = theta^{a_H}(1 - \theta)^{a_T}$ 를 최대화하는 $\hat{\theta} = \frac{a_H}{a_H + a_T}$ 임을 이용하여  $P(\theta \vert D)$ 를 최대화하는 $\hat{\theta}$ 의 값도 나타낼 수 있다.
+최대 사후 확률 추정에서 우리의 목표는 사후 확률인 $P(\theta \vert D)$ 를 최대화하는 것입니다. 수식으로는 $\text{argmax}$ 를 사용하여 아래와 같이 나타낼 수 있습니다.
 
 
 $$
-P(\theta \vert D) \propto \theta^{a_H + \alpha -1}(1 - \theta)^{a_T +\beta-1} \\
-\hat{\theta}_{MAP} = \frac{a_H + \alpha -1}{a_H + \alpha + a_T +\beta - 2}
+\hat{\theta} = \text{argmax}_{\theta} P(\theta \vert D)
 $$
 
 
-
-MLE와 MAP 방식으로 구해진 $\hat{\theta}$ 은 $\alpha=\beta=1$ 인 경우를 제외하고는 서로 같지 않다. 하지만 $N$ 이 커질수록(시도가 늘어날수록) $a_H , a_T$ 가 커지게 되어 점점 비슷해지게 된다. 
-
+위에서 알아본 바와 같이 $P(D)$ 는 상수이므로 위 식을 아래와 같이 변형해주어도 $\hat{\theta}$ 의 값은 변하지 않습니다.
 
 
-[^1]: 어떤 수열이나 함수가 있을 때, 해당 수열이나 함수가 정의된 구간에서 감소하지 않는 경우를 단조증가, 증가하지 않는 경우를 단조감소 함수라고 한다. 위 그림에서 오른쪽 그래프의 경우 중간에 감소하는 구간이 존재하므로 해당 그래프는 단조증가 함수가 아니나, 왼쪽의 그래프의 경우 감소하는 구간이 존재하지 않으므로 단조증가 함수라고 할 수 있다. 결국 감소하는 구간이 없는 경우란 값이 일정하거나 증가하는 구간밖에 없는 경우가 된다. 이 단조증가에서 모든 구간에서 항상 수치가 증가하는 경우를 ‘강한 단조증가’라고 하기도 한다. 출처 : 과학포털 사이언스올
+$$
+\hat{\theta} = \text{argmax}_{\theta} P(D \vert \theta) P(\theta) \qquad \\
+\qquad \quad = \text{argmax}_{\theta} [\theta^{\alpha_H + \alpha -1}(1 - \theta)^{\alpha_T +\beta-1}]
+$$
+
+
+이제부터는 최대 우도 추정에서 했던 과정을 동일하게 해주면 됩니다. $\text{argmax}$ 이하의 식에 로그를 취해준 뒤 미분하여 그 값이 0이 되는 $\theta$ 를 찾아줍니다.
+
+
+$$
+\hat{\theta} = \text{argmax}_{\theta} [\theta^{\alpha_H + \alpha -1}(1 - \theta)^{\alpha_T +\beta-1}] \qquad \qquad \qquad \\
+= \text{argmax}_{\theta} \ln [\theta^{\alpha_H + \alpha -1}(1 - \theta)^{\alpha_T +\beta-1}] \qquad \qquad \\
+\qquad \qquad = \text{argmax}_{\theta}[(\alpha_H + \alpha -1) \ln \theta + (\alpha_T +\beta-1) \ln (1 - \theta)]
+$$
+
+$$
+\frac{d}{d\theta}[(\alpha_H + \alpha -1) \ln \theta + (\alpha_T +\beta-1) \ln (1 - \theta)] = 0\\
+\frac{(\alpha_H + \alpha -1)}{\theta} - \frac{(\alpha_T + \beta -1)}{1-\theta} = 0 \\
+$$
+
+마지막 방정식 $\theta$ 에 관해서 정리하면 아래와 같다
+
+
+$$
+\hat{\theta}_{MAP} = \frac{\alpha_H + \alpha -1}{\alpha_H + \alpha + \alpha_T +\beta - 2}
+$$
+
+
+최대 우도 추정과 최대 사후 확률 추정을 통해 추정한 특정 사건의 확률 $\theta$ 는 비슷한 모양새를 띠고 있지만 완전히 같지는 않습니다. 베타 분포 내의 상수가 $\alpha=\beta=1$ 일 경우에만 서로 같아집니다. 하지만 시행 횟수 $N$ 이 커지면, 데이터셋의 크기가 커질수록 상수인 $\alpha, \beta$ 에 비해 $\alpha_H , \alpha_T$ 가 커지게 됩니다. 그렇기 때문에 $N$ 이 커질수록 최대 우도 추정으로 구한 $\theta$ 와 최대 사후 확률 추정으로 구한 $\theta$ 가 비슷해집니다.
+
+
+
+[^1]: 수학에서, **단조 함수는 주어진 순서를 보존하는 함수** 이다. 기하학적으로, 실수 단조 함수의 그래프는 왼쪽에서 오른쪽으로 줄곧 상승하거나 줄곧 하강한다. 대수학적으로, 단조 함수는 두 순서 집합 사이의 준동형이다. ( 출처 - [위키백과 : 단조함수](https://ko.wikipedia.org/wiki/단조함수) )
+[^2]: 확률론과 통계학에서, **베이즈 정리** (Bayes’ theorem)는 두 확률 변수의 사전 확률과 사후 확률사이의 관계를 나타내는 정리다. 베이즈확률론 해석에 따르면 베이즈 정리는 사전확률로부터 사후확률을 구할 수 있다. ( 출처 - [위키백과 : 베이즈 정리](https://ko.wikipedia.org/wiki/베이즈_정리) )
+
