--- a/_posts/2020-06-15-ds_array.md
+++ b/_posts/2020-06-15-ds_array.md
@@ -13,9 +13,9 @@ tag: Data Structure
 
 # 배열 (Array)
 
-배열(Array)은 기본적으로 동일한 데이터끼리 **인덱스를 활용하여 저장, 접근** 할 수 있는 자료형이다. 때문에 배열의 각 요소에는 0부터 순차적으로 증가하는 인덱스가 할당되어 있다. 파이썬의 경우 좀 더 배열을 좀 더 일반적으로 만든 리스트(List)라는 자료형을 사용한다. 다른 언어는 배열에 들어가는 자료의 종류와 배열의 크기를 미리 정해주어야 하지만 파이썬은 좀 더 간단하게 리스트를 만들 수 있다.
+**배열(Array)** 이란 기본적으로 동일한 자료형의 데이터를 인덱스를 활용하여 저장 및 접근할 수 있는 자료형입니다. 그렇기 때문에 배열의 각 요소에는 0부터 순차적으로 증가하는 인덱스가 할당되어 있습니다.
 
-
+파이썬에서는 배열을 좀 더 일반화한 리스트(List)라는 자료형을 사용합니다. C, C++ 등의 언어는 배열에 들어가는 자료형의 종류와 배열의 크기를 미리 정해주어야 하지만 파이썬의 리스트는 이를 미리 지정하지 않고 리스트를 생성할 수 있습니다. 또한 리스트에서는 여러 자료형이 하나의 리스트에 들어가도록 할 수 있습니다.
 
 ```python
 x = ['a', 'b', 'd', 'e', 'f']
@@ -23,15 +23,27 @@ x = ['a', 'b', 'd', 'e', 'f']
 
 
 
-## 배열 탐색하기
+## 배열에서의 탐색(Search)
 
-특정 요소가 배열 안에 있는 지를 탐색하는 기본적인 알고리즘을 생각해보자. (파이썬에서는 in 함수를 사용할 수 있지만 좀 더 일반적인 경우를 가정) 위에서 말했듯 배열에는 인덱스가 있기 때문에 이를 활용하여 각각의 요소를 살펴볼 수 있다. 위에서 등장한 `x` 에서 반복문을 통해 `'c'` 와 `'d'` 를 찾는다고 하자. `'c'` 를 탐색할 경우처럼 배열 내에 요소가 없을 때는 요소의 개수(N)만큼 검색을 하게 되고, `'d' `를 탐색할 경우처럼 배열 내에 요소가 있을 경우 그 인덱스까지만(최대 N회) 검색을 하게된다.
+배열 안에 특정 요소가 있는 지를 탐색하는 알고리즘을 설계해 봅시다. 정렬된 배열의 경우 다른 알고리즘을 적용할 수도 있지만, 일반적인 경우는 0번째 인덱스부터 순차적으로 접근하여 그 값이 찾고자 하는 값인지 아닌 지를 비교합니다. 이를 **선형 탐색(Linear search)** 알고리즘이라고 합니다. 아래는 배열에서 선형 탐색 알고리즘이 이루어지는 과정을 도식화하여 나타낸 것입니다.
+
+<img src="https://user-images.githubusercontent.com/45377884/89652554-95857400-d900-11ea-9e8a-30b1f50cc9ec.png" alt="array1" style="zoom:67%;" />
+
+위에서 등장한 배열 `x` 에서 선형 탐색 알고리즘을 통해 `'c'` 와 `'d'` 를 찾는 과정을 생각해봅시다. 먼저 `'c'` 를 찾는 과정입니다. 우리는 `'c'` 가 없다는 것을 한눈에 알 수 있지만 컴퓨터는 한 번에 하나의 요소밖에 보지 못하므로 순차적으로 매 인덱스에 위치한 요소값을 확인하여 비교하여야 합니다. 알고리즘은 `True` 가 나올 때까지 진행되므로 
+
+위에서 등장한 `x` 에서 반복문을 통해 `'c'` 와 `'d'` 를 찾는다고 하자. `'c'` 를 탐색할 경우처럼 배열 내에 요소가 없을 때는 요소의 개수(N)만큼 검색을 하게 되고, `'d' `를 탐색할 경우처럼 배열 내에 요소가 있을 경우 그 인덱스까지만(최대 N회) 검색을 하게된다.
 
 
 
-## 삽입
+## 배열에서의 삽입(Insert)
 
-`'c' `가 없다는 것을 알고 배열 속(인덱스 2)에 삽입할 경우를 생각해보자. 삽입은 탐색보다 복잡한 과정을 거친다. (1) 먼저 원래의 배열보다 하나 더 큰 리스트를 만든다(이 리스트를 `y` 라고 하자). (2) 두 번째로 삽입할 인덱스 이전까지의 reference를 `x` 에서 `y` 로 복사한다. (3) 세 번째로는 삽입할 인덱스에서 하나의 reference를 삽입할 값, `'c'` 에 연결한다. (4) 그리고 `x` 의 나머지 부분에 해당하는 reference를 `y` 의 인덱스를 하나씩 증가한 부분에 복사한다. (5) 마지막으로 `x` 의 reference를 모두 `y` 의 reference로 변경하면 삽입 과정이 완료된다. 이를 코드로 나타내면 아래와 같다.
+이번에는 삽입 알고리즘 과정에 대해 생각해봅시다. 만약 위 배열 `'b'` 와 `'d'` 사이에 `'c'` 를 삽입하는 작업은 어떻게 할 수 있을까요?  배열에 특정 요소를 삽입할 때 원천적으로 발생하는 문제가 하나 있습니다. 위에서 배열은 크기가 정해져 있다고 했는데 어떻게 이미 만들어진 배열 안에 하나의 요소를 더 넣을 수 있을까요? 정담은 없습니다. 운전자 1명과 손님 4명이 타고 있는 택시에 손님을 태울 수 없는 것과 마찬가지입니다. 5명이 하나의 택시를 타려면 소형차가 아닌 중형보다 큰 새로운 차를  필요로 하는 것처럼, 배열도 정해진 개수보다 많은 요소를 삽입하려면 새로운 배열이 필요합니다.
+
+우리의 목표는 하나의 요소를 삽입하는 것이므로 가장 먼저 원래의 배열보다 하나 더 큰 빈 배열을 만듭니다. 두 번째로는 새로운 요소를 삽입할 인덱스 이전까지의 참조(Reference)를 원래의 배열 `x` 에서 새로운 배열 `y` 로 복사합니다. 새로 삽입할 요소의 인덱스가 되면 그 참조를 우리가 삽입하고자 하는 값, 즉  `'c'` 에 연결합니다. 다시 다음 인덱스부터는 원래 배열 `x` 의 참조를 새로 만드는 배열의 하나씩 증가한 인덱스 `y` 에 복사합니다. 마지막으로 `x` 의 참조를 `y` 의 참조로 변경하면 삽입 과정이 완료됩니다. 아래는 이 과정을 도식화하여 나타낸 것입니다.
+
+<img src="https://user-images.githubusercontent.com/45377884/89652559-96b6a100-d900-11ea-994c-eabeb330c5b9.png" alt="array2" style="zoom:67%;" />
+
+이 과정을 파이썬 코드로 구현하면 아래와 같습니다.
 
 ```python
 x = ['a', 'b', 'd', 'e', 'f']
@@ -51,13 +63,17 @@ for itr in range(idxInsert, len(x)):
 x = y
 ```
 
-삽입할 인덱스 `idxInsert` 를 `a` 라 나타내었을 때, 위와 같은 삽입 과정을 진행할 때는 (2)에서 a 만큼의 Operation이 소요된다. (3)에서 1번의 Operation이 필요하며, (4)에서는 (N-a-1)만큼의 Operation이 필요하게 된다. 때문에 삽입 과정에 필요한 총 Operation의 횟수는 a+1+(N-a-1) = N이 된다.
+삽입 알고리즘에서는 Operation이 몇 번이나 일어날까요? 단계를 나누어 생각해봅시다. 원래 배열의 크기를 N, 새로운 요소를 삽입할 인덱스  `idxInsert`  를 `a` 라고 합시다. 그렇다면 그 `0` 부터 `a-1` 까지 참조를 복사하는 데 $a$ 번의 Operation을 수행합니다. 인덱스 `a` 에서 원하는 요소와 참조를 연결하는 과정에서는 $1$ 번의 Operation을 수행합니다. 인덱스 `a+1` 부터 `N` 까지의 참조를 복사하는 데에는 $N - a$ 번의 Operation을 수행합니다. 세 과정에서 수행하는 Operation의 개수를 합하면 삽입 알고리즘에 필요한 총 Operation 횟수가 $N + 1 = a + 1 + (N - a)$ 임을 알 수 있습니다.
 
 
 
-## 삭제
+## 배열에서의 삭제(Delete)
 
-배열에서 요소를 삭제하는 과정은 삽입 과정과 유사하다. (1) 먼저 인덱스가 하나 적은 배열을 만든다. (2) 그리고 삭제하려는 인덱스 이전에 있는 레퍼런스는 새로운 배열에 그대로 복사한다. (3) 삭제하려는 요소는 그대로 건너뛴다. (4) 이후 요소들에 연결된 레퍼런스는 새로운 배열에 인덱스를 하나씩 감소시켜 복사한다. (5) 마지막으로 원래 배열의 reference를 새로운 배열의 reference로 변경하면 삭제 과정이 완료된다. 원래의 배열 `x` 에서 `'d'` 를 삭제하는 과정은 다음과 같다.
+배열에서 특정 요소를 삭제하는 과정은 삽입 과정과 유사합니다. 배열에서 `'d'` 를 삭제하는 작업에 대해 생각해봅시다. 배열에는 빈자리도 있을 수 없으므로 하나의 요소를 삭제하기 위해서는 먼저 인덱스가 하나 적은 배열을 만들어야 합니다. 이후에는 삭제하려는 인덱스 이전에 있는 참조를 새로운 배열에 그대로 복사합니다. 삭제하려는 인덱스 이전에 있는 참조는 건너뛰게 되며 해당 인덱스 이후부터는 다시 새로운 배열의 하나씩 감소시킨 인덱스에 참조를 복사합니다. 마지막으로 원래의 배열 `x` 의 참조를 새로운 배열의 참조로 변경하면 삭제 과정이 완료됩니다.
+
+<img src="https://user-images.githubusercontent.com/45377884/89652560-974f3780-d900-11ea-9836-0d8c3cb6bace.png" alt="array3" style="zoom:67%;" />
+
+이 과정을 파이썬 코드로 구현하면 아래와 같이 됩니다.
 
 ```python
 x = ['a', 'b', 'c', 'd', 'e', 'f']
@@ -74,7 +90,7 @@ for itr in range(idxDelete+1, len(x)):
 x = y
 ```
 
-삭제할 요소의 인덱스 `idxDelete` 를 `a` 라 나타내었을 때, 위와 같은 삭제 과정을 진행할 때는 (2)에서 a 만큼의 Operation이 소요된다. (4)에서는 (N-a-1)만큼의 Operation이 필요하게 된다. 때문에 삭제 과정에 필요한 총 Operation의 횟수는 a+(N-a-1) = N-1이 된다.
+삭제 알고리즘에서는 Operation이 몇 번이나 일어날까요? 삽입과 마찬가지로 단계를 나누어 생각해봅시다. 원래 배열의 크기를 N, 삭제할 요소의 인덱스  `idxDelete`  를 `b` 라고 합시다. 그렇다면 그 `0` 부터 `b-1` 까지 참조를 복사하는 데 $b$ 번의 Operation을 수행합니다. 인덱스 `b` 에서는 아무런 Operation없이 건너뛰므로 고려하지 않으면 됩니다. 인덱스 `b+1` 부터 `N` 까지의 참조를 복사하는 데에는 $N - b$ 번의 Operation을 수행합니다. 세 과정에서 수행하는 Operation의 개수를 합하면 삭제 알고리즘에서는 총 $N + 1= b + 1 + (N - b)$ 회의 Operation이 필요함을 알 수 있습니다.
 
 
 
