--- a/_posts/2020-04-04-mle_map.md
+++ b/_posts/2020-04-04-mle_map.md
@@ -78,9 +78,11 @@ $$
 
 
 $$
-\frac{d}{d\theta}(\alpha_H \ln \theta + \alpha_T \ln (1 - \theta)) = \frac{\alpha_H}{\theta} - \frac{\alpha_T}{1 - \theta} = 0 \\
-\theta = \frac{\alpha_H}{\alpha_H + \alpha_T} \\
-\therefore \quad \hat{\theta}_{MLE} = \frac{\alpha_H}{\alpha_H + \alpha_T}
+\begin{aligned}
+\frac{d}{d\theta}(\alpha_H \ln \theta + \alpha_T \ln (1 - \theta)) &= \frac{\alpha_H}{\theta} - \frac{\alpha_T}{1 - \theta} = 0 \\
+\theta &= \frac{\alpha_H}{\alpha_H + \alpha_T} \\
+\therefore \hat{\theta}_{MLE} &= \frac{\alpha_H}{\alpha_H + \alpha_T}
+\end{aligned}
 $$
 
 
@@ -115,8 +117,10 @@ $$
 
 
 $$
-P(\theta \vert D) = \frac{P(D \vert \theta) P(\theta)}{P(D)} \\
-\text{Posterior} = \frac{\text{Likelihood}\times \text{Prior Knowledge}}{\text{Normalizing Constant}}
+\begin{aligned}
+P(\theta \vert D) &= \frac{P(D \vert \theta) P(\theta)}{P(D)} \\
+\text{Posterior} &= \frac{\text{Likelihood}\times \text{Prior Knowledge}}{\text{Normalizing Constant}}
+\end{aligned}
 $$
 
 
@@ -168,14 +172,18 @@ $$
 
 
 $$
-\hat{\theta} = \text{argmax}_{\theta} [\theta^{\alpha_H + \alpha -1}(1 - \theta)^{\alpha_T +\beta-1}] \qquad \qquad \qquad \\
-= \text{argmax}_{\theta} \ln [\theta^{\alpha_H + \alpha -1}(1 - \theta)^{\alpha_T +\beta-1}] \qquad \qquad \\
-\qquad \qquad = \text{argmax}_{\theta}[(\alpha_H + \alpha -1) \ln \theta + (\alpha_T +\beta-1) \ln (1 - \theta)]
+\begin{aligned}
+\hat{\theta} &= \text{argmax}_{\theta} [\theta^{\alpha_H + \alpha -1}(1 - \theta)^{\alpha_T +\beta-1}] \\
+&= \text{argmax}_{\theta} \ln [\theta^{\alpha_H + \alpha -1}(1 - \theta)^{\alpha_T +\beta-1}] \\
+&= \text{argmax}_{\theta}[(\alpha_H + \alpha -1) \ln \theta + (\alpha_T +\beta-1) \ln (1 - \theta)]
+\end{aligned}
 $$
 
 $$
-\frac{d}{d\theta}[(\alpha_H + \alpha -1) \ln \theta + (\alpha_T +\beta-1) \ln (1 - \theta)] = 0\\
-\frac{(\alpha_H + \alpha -1)}{\theta} - \frac{(\alpha_T + \beta -1)}{1-\theta} = 0 \\
+\begin{aligned}
+\frac{d}{d\theta}[(\alpha_H + \alpha -1) \ln \theta + (\alpha_T +\beta-1) \ln (1 - \theta)] &= 0\\
+\frac{(\alpha_H + \alpha -1)}{\theta} - \frac{(\alpha_T + \beta -1)}{1-\theta} &= 0
+\end{aligned}
 $$
 
 마지막 방정식 $\theta$ 에 관해서 정리하면 아래와 같다
