--- a/_posts/2020-05-12-nlp_bow.md
+++ b/_posts/2020-05-12-nlp_bow.md
@@ -35,7 +35,7 @@ tag: NLP
 
 단어-문서 행렬은 단어를 어떤 방식으로 기록할 것인지에 따라 두 종류로 나뉩니다. 아래 이미지를 통해 두 방식을 비교할 수 있습니다.
 
-<img src="https://user-images.githubusercontent.com/45377884/81645203-206ee380-9464-11ea-81ba-8a8fb9e52f03.png" alt="tdm" style="zoom:100%;" />
+<p align="center"><img src="https://user-images.githubusercontent.com/45377884/81645203-206ee380-9464-11ea-81ba-8a8fb9e52f03.png" alt="tdm" style="zoom:100%;" /></p>
 
 <p align="center" style="font-size:80%">이미지 출처 : <a href="https://github.com/pilsung-kang/text-analytics">Text-Analytics Github</a></p>
 
@@ -47,7 +47,7 @@ tag: NLP
 
 Bag of Words의 단점은 단어가 등장하는 순서, 즉 어순을 고려하지 않는다는 점입니다. 아래는 (비속어가 있긴 하지만) *"한글의 위대함.jpg"* 라는 제목으로 떠도는 이미지입니다.
 
-<img src="https://user-images.githubusercontent.com/45377884/89851025-83d4f280-dbc6-11ea-8b54-6c8fa612df1c.jpeg" alt="bog" style="zoom: 33%;" />
+<p align="center"><img src="https://user-images.githubusercontent.com/45377884/89851025-83d4f280-dbc6-11ea-8b54-6c8fa612df1c.jpeg" alt="bog" style="zoom: 33%;" /></p>
 
 (맨 마지막 문장에 등장하는 "시발"만 "씨발"로 오타를 고친다면) 위 이미지에 나타난 11개 문장을 Bag of Words로 표현하면 모두 *"{ 영어는 : 1, 씨발 : 1, 이런거 : 1, 안되잖아 : 1 }"* 로 나오게 됩니다. 실제로는 11개의 문장이 서로 다르지만 Bag of Words 로 표현하면 모두 같게 되는 것입니다. 다른 예시도 있습니다 *"Mary loves John"* 과 *"John loves Mary"* 는 주어와 목적어가 반대이기 때문에 의미가 완전히 다른 문장입니다. 하지만 이 두 문장을 Bag of Words로 표현하면 모두 *"{ Mary : 1, loves : 1, John : 1 }"* 로 같아져 버립니다. 이런 단점 때문에 단어 사이의 관계나 문맥의 의미가 중요한 태스크에 Bag of Words 를 사용하는 것은 적절하지 못할 때가 많습니다.
 
